Fix all "." punctuation
Signed-off-by: Liang Zhang <psychelzh@outlook.com>

--- a/04.qmd
+++ b/04.qmd
@@ -22,7 +22,7 @@
 
 指导博士论文有很多方法，导师可以扮演很多不同的角色；每个学生都与众不同，也就需要不同的支持和帮助。其中一种类型的学生很大程度上可以独立完成大部分工作，指导见面会就成为师生双方都很享受的时刻，因为彼此能够相互学习。这种情况虽然很少，但是确实存在。这类学生一般入学成绩分数都不是很高，成绩不是最优秀的，但是他们有一个共同点，即他们擅长自学，能够适时判断什么时候应该停下来接受反馈。另外一种类型的学生从来不主动去学习什么知识，他们需要不间断的反馈、积极的鼓励，看起来总是期待有人一勺一勺的来喂他们，甚至到了一种令人担忧的程度。对于属于第一种类型的学生而言，导师们经常会忙于幕后工作，想方设法帮他们寻找毕业后需要的资助；对于另一种类型的学生而言，导师们则有不同于资助的事情需要优先考虑。
 
-导师的指导还体现在填写相关表格、撰写年度报告、联系实习单位等细微之处。除此之外，还有很多导师要扮演的角色．有些可能与你的情况类似，有些可能不同，有些可能你还没有意识到。
+导师的指导还体现在填写相关表格、撰写年度报告、联系实习单位等细微之处。除此之外，还有很多导师要扮演的角色。有些可能与你的情况类似，有些可能不同，有些可能你还没有意识到。
 
 其他角色包括：
 
@@ -203,7 +203,7 @@
 * 歧视：性别歧视，种族歧视等。大多数学校都有相关程序处理这些歧视问题。不管你愿不愿意卷入正式程序当中，你应该另找导师。
 * 知识产权问题：“吸收在”或者窃取他人作品，阻挠研究进程、禁止发表研究结果。关于这点，良好的习惯会很有帮助，比如说，让别人了解你在研究什么项目，并且及时记录阶段性成果，但是仅仅这样做是不够的。
 * 无法沟通：不管什么时候，你努力去跟导师沟通，你都不会成功。
-* 骚扰：性骚扰、以强凌弱、诽谤、麻木不仁。同样，大部分学校对这类事件也会有相关规定．通过相关程序处理此类问题，或者至少有一位专业人士帮你处理。
+* 骚扰：性骚扰、以强凌弱、诽谤、麻木不仁。同样，大部分学校对这类事件也会有相关规定，通过相关程序处理此类问题，或者至少有一位专业人士帮你处理。
 
 如果发现自己身上发生上述事情，你必须极其小心地开始行动，并且采取一定的方式方法。你需要做的事情如下所列：
 
@@ -216,7 +216,7 @@
 
 ## 为使导师见面会有效而设计的一个简单的规划
 
-* 提交一份供讨论的文件：在见面会前一个星期，给导师送上一份文件，这份文件可以是进展报告，可以是学习计划，可以是你正在阅读的文献的批评，或者加注的参考书目，可以是一份资料，或者会议论文的草稿等，切可以代表你在做的课题的内容的文件都可以．当然，你有一些具体的问题需要讨论会对你更加有好处，而且准备一些材料也有助于集中精力思考。见面会上，你要随身带上供讨论文件的复印件。
+* 提交一份供讨论的文件：在见面会前一个星期，给导师送上一份文件，这份文件可以是进展报告，可以是学习计划，可以是你正在阅读的文献的批评，或者加注的参考书目，可以是一份资料，或者会议论文的草稿等，一切可以代表你在做的课题的内容的文件都可以。当然，你有一些具体的问题需要讨论会对你更加有好处，而且准备一些材料也有助于集中精力思考。见面会上，你要随身带上供讨论文件的复印件。
 * 提供关键的论文：会议之前，把你认为对导师很重要的论文寄给他，尤其是当你希望讨论这些论文的时候，就更有必要事先给导师送上一份。同时确保每一处引用都已经在文中注明了。给导师提供论文，也是你对导师的礼貌的体现，这些文章在手边，也方便讨论。
 * 准时出席：如果你迟到了，就要有所表示，例如，你可以带些巧克力饼干给导师品尝。
 * 写下你的目标：弄清楚你希望从导师见面会中得到些什么，不管是技术方面、管理方面还是感情方面的指导性建议。将这些需求按照优先顺序排列，在见面会之前给自己列出这样一个清单，这样能在开会之前找到些有趣的话题讨论，因为如果你没有想法的话，就要准备提出些问题，这样才能够和导师开展讨论。
