--- a/06.qmd
+++ b/06.qmd
@@ -177,7 +177,7 @@
 
 ### 标题页与致谢
 
-专业评审人在看学生论文的这两个部分时会留意是否有拼写之类的错误。他们也往往能发现有这样的错误存在。一个很普遍的错误是拼错了导师的姓名，或搞错了称谓。到了博士阶段，你可能已经了解了不同称谓的微妙差别，但对于攻读硕士学位的学生来说，有很多人．尤其是学工科的，往往懒得去确认导师的称谓，有的即使意识到这个问题的重要性，也弄不懂其中的规则。如果你有疑问，可以查看教师名单或问别人。把别人的称谓搞错是很有效的激怒别人的方法，在企业和学术圈都是如此。
+专业评审人在看学生论文的这两个部分时会留意是否有拼写之类的错误。他们也往往能发现有这样的错误存在。一个很普遍的错误是拼错了导师的姓名，或搞错了称谓。到了博士阶段，你可能已经了解了不同称谓的微妙差别，但对于攻读硕士学位的学生来说，有很多人，尤其是学工科的，往往懒得去确认导师的称谓，有的即使意识到这个问题的重要性，也弄不懂其中的规则。如果你有疑问，可以查看教师名单或问别人。把别人的称谓搞错是很有效的激怒别人的方法，在企业和学术圈都是如此。
 
 在读摘要和论文主体前看看致谢词其实是一种无害的娱乐。某些情况下致谢词也很有用——比如，如果一个学生在致谢词中感谢一位领域内权威学者对他的帮助，那可能预示着这个学生的研究会很有趣。
 
@@ -278,7 +278,7 @@
 
 某些诸如心理学之类的学科，方法部分一般有严格的学术规范和固定的写作模式，以至于它（a）极其简洁并且（b）无法被非专业读者理解。使用这类学术写作模式有利于向审阅人传达正确的信号。举个例子来说，如果审阅人读到类似这样的句子：”以对抗平衡法进行完全受试者内设计兀它就能暗示审阅人，它的作者是对课题非常精通的专业人士。
 
-实验性研究的论文必须有方法部分．其他类型的论文往往不包含方法部分。
+实验性研究的论文必须有方法部分，其他类型的论文往往不包含方法部分。
 
 ### 结果部分
 
@@ -300,7 +300,7 @@
 
 因为某些原因，往往很难从讨论部分看出论文作者对专业知识技能的掌握是否过硬。这可能是因为，即便是缺乏经验的研究员，也可能在绝望中生出灵感，编一些精彩又可信的故事来解释他们在研究中的发现。
 
-合理地使用技术术语和引用相关文献在讨论部分仍然奏效；空洞的、故作玄妙的用词，宽泛非专业性的知识，以及引用过时的参考书（硕士论文更容易犯这个错误）都是应该避免的。在一篇组织严密的博士论文中，讨论部分的结构一般会与引言和结果部分的结构相对应：引言中提出问题．结果部分用表格回答问题，讨论部分讨论问题的答案。
+合理地使用技术术语和引用相关文献在讨论部分仍然奏效；空洞的、故作玄妙的用词，宽泛非专业性的知识，以及引用过时的参考书（硕士论文更容易犯这个错误）都是应该避免的。在一篇组织严密的博士论文中，讨论部分的结构一般会与引言和结果部分的结构相对应：引言中提出问题，结果部分用表格回答问题，讨论部分讨论问题的答案。
 
 ### 结论
 
@@ -423,7 +423,7 @@
 
 ### 文献回顾（literature survey）和文献综述这（literature review）有何区别？
 
-在研究过程中．学生对文献的利用有一个不断成熟的过程。这个过程与研究问题不断形成、完善的过程是同时完成、互相对应的。过程中的几个阶段在表2中已经展示出来了。
+在研究过程中，学生对文献的利用有一个不断成熟的过程。这个过程与研究问题不断形成、完善的过程是同时完成、互相对应的。过程中的几个阶段在表2中已经展示出来了。
 
 所以，文献回顾与文献综述的区别在于前者是做汇总，后者是做批评。在理想情况下，做完研究后，学生应该已经形成了自己的“批评的声音”。论文中的文献综述部分应该是从作者的角度去理清文献的脉络。如果文献综述结构清晰，有一定的批评性，那么到最后，研究问题就会自然而然地这“浮出水面”，它应该被看做是文献综述的“不可避免的”结果。
 
@@ -460,7 +460,7 @@
     * 有关作者信息的摘要。
 
 学术训练
-:   保存制作带说明的文献目录是一种学术训练。要养成这种训练的习惯，最有效的办法是在阅读文献的同时就做记录，并在记录完成后再开始阅读新的文献。如果你没有及时记录，你就会不得不试图重新拾起以前读过的东西．这样做的难度会大得多。因为记录参考文献是耗费精力的一笔“支出”，又因为记录的目的是为了更有效地使用文献资料，所以最好将每部文献的摘要精简到一页左右。
+:   保存制作带说明的文献目录是一种学术训练。要养成这种训练的习惯，最有效的办法是在阅读文献的同时就做记录，并在记录完成后再开始阅读新的文献。如果你没有及时记录，你就会不得不试图重新拾起以前读过的东西，这样做的难度会大得多。因为记录参考文献是耗费精力的一笔“支出”，又因为记录的目的是为了更有效地使用文献资料，所以最好将每部文献的摘要精简到一页左右。
 
     不要删除以前做下的文献记录。“废弃物在”可以重新分类或单独保存，某一年的“垃圾”可能会成为下一年的“宝藏”（反之亦然）。同时，保留分类变动的记录是很有意义的，它的一个做法就是列出你现在使用的所有类别的在“定义”。在对分类进行调整之后，不要丢弃原来的分类方案，而是应该将它保存起来，作为记录的一部分。
 
