--- a/09.qmd
+++ b/09.qmd
@@ -24,15 +24,15 @@
 
 第一步就是做一些积极的事情使自己有一个好心情。标准的自助性质的书籍在这方面很管用。书里推荐的很多做法即便是没有多少空闲时间的博士生都可以尝试，而且它们通常很有趣。比如，你可以花15分钟的时间来做运动，这能使你心情好、身体棒，还可以使你的头脑更加清醒。这15分钟的运动可以包括打扫屋子、房间或阁楼的卫生死角。打扫卫生能够使你有一个更整洁舒适的环境，或者提高你写论文的积极性，对你无论如何是有好处的。
 
-另一件首先要做的事（两件事可以同时进行）是停止把论文看做是一项庞大工程，而开始将它设想成一份由诸多部分组成的文件，每一部分都有其存在的理由，并且每一部分又是由其他更小的部分构成的。你可以以每个小部分为单位展开写作，这样你要处理的就不再是一个庞大工程．而是篇幅不长的若于个文字板块而已。你可以写下每一章的标题以及每一小节的小标题。你也可以就各个小节的写作时间安排制定一个计划，要注意必须留出足够的时间来制作表格、参考书目和附录。这方面的所有事项在专门讲博士学位标准程序的书上都能找到。
+另一件首先要做的事（两件事可以同时进行）是停止把论文看做是一项庞大工程，而开始将它设想成一份由诸多部分组成的文件，每一部分都有其存在的理由，并且每一部分又是由其他更小的部分构成的。你可以以每个小部分为单位展开写作，这样你要处理的就不再是一个庞大工程，而是篇幅不长的若于个文字板块而已。你可以写下每一章的标题以及每一小节的小标题。你也可以就各个小节的写作时间安排制定一个计划，要注意必须留出足够的时间来制作表格、参考书目和附录。这方面的所有事项在专门讲博士学位标准程序的书上都能找到。
 
-在那些专门讲博士学位标准程序的书里可能没有具体指出，但你仍必须牢记的是：你应该将“制作橱柜”的技能充分应用和体现在论文里。例如在参考文献方面：你是否将关键性的文献清楚地列在了参考文献中？不同时期的文献分布合理吗？你是否加人了一些标准参考文献以外的，能体现你独立阅读的文献？你是否加入了能体现你具有追求完美的研究态度．并已经做了全面的背景阅读的文献？……另外这种技能还包括你能够进行的研究类型。如果你的学科要求你会进行涉及广泛的、统计数据繁多的调查研究和深入的、不涉及统计数据的个案分析，那么你的论文就应该能够体现出你已经掌握了调查研究和个案分析这两种研究类型。
+在那些专门讲博士学位标准程序的书里可能没有具体指出，但你仍必须牢记的是：你应该将“制作橱柜”的技能充分应用和体现在论文里。例如在参考文献方面：你是否将关键性的文献清楚地列在了参考文献中？不同时期的文献分布合理吗？你是否加人了一些标准参考文献以外的，能体现你独立阅读的文献？你是否加入了能体现你具有追求完美的研究态度，并已经做了全面的背景阅读的文献？……另外这种技能还包括你能够进行的研究类型。如果你的学科要求你会进行涉及广泛的、统计数据繁多的调查研究和深入的、不涉及统计数据的个案分析，那么你的论文就应该能够体现出你已经掌握了调查研究和个案分析这两种研究类型。
 
 进行到这个阶段时你应该已经写了不少东西了。有些部分，比如参考书目，是你有意识地慢慢积累起来的。而其他部分，比如实验科学博士论文的方法章节，可以在做研究的同时成稿，并且一旦成稿，就不会再做太大的改动。
 
 改动最大的是每一章的引言和讨论部分（包括第一章的文献综述部分）。通过过去几年的研究，你一定已经意识到了，对你的研究课题真正具有重要意义的问题并不是你在着手研究时所设想的那些问题。所以你在第三年写的文献综述一定不同于你在第一年写的文献综述。这是完全正常的。如果你好几年的研究得出的结论与你最初凭直觉猜测的一模一样，那倒是令人担忧的现象。修昔底德在撰写他的伟大著作时，或许也曾经在中途停笔，又重新从头写起，这才得以发现第一遍时错过的重要主题。在你发现论文的某些部分要卷土重来时，你可能没有心情去同情修昔底德这个没有幽默感的老学究，但如果这样一个著名的天才也遇到过要重写的状况，你遇到这种状况时也就没必要感到羞耻了。
 
-修昔底德的故事对你有什么启示意义呢？它的启示意义就在于，如果你有基本常识的话，你应当认真考虑彻底重写引言和讨论部分。重写这两个部分可以使你的论文更有条理，每一章到下一章的过渡更加自然严密，而不是让人感觉是随心所欲拼凑起来的。比如说，你可以在引言部分提出一组明确的问题，在结果部分分别用一组图表来回答这些问题．并在讨论部分依次讨论引言中的每个问题。所有无关的、节外生枝的部分都应该被删除掉。
+修昔底德的故事对你有什么启示意义呢？它的启示意义就在于，如果你有基本常识的话，你应当认真考虑彻底重写引言和讨论部分。重写这两个部分可以使你的论文更有条理，每一章到下一章的过渡更加自然严密，而不是让人感觉是随心所欲拼凑起来的。比如说，你可以在引言部分提出一组明确的问题，在结果部分分别用一组图表来回答这些问题，并在讨论部分依次讨论引言中的每个问题。所有无关的、节外生枝的部分都应该被删除掉。
 
 再次使用制作橱柜的类比，橱柜需要上光，写论文也需要润色。你应该确保评审人阅读的最开始几页展示了你多方面的学术技能——好的参考文献、专业的论证和好的表达。要有充足的时间做这些工作。修改参考文献中的标点符号错误听上去不是很费劲，但如果你犯的小错误太多，修改起来就会花去大量的时间。
 
@@ -262,7 +262,7 @@
 
 问：我正在成稿的过程中，却发现有人发表过和我的论文几乎一模一样的东西。我该怎么办？
 
-答：不要慌。同样的材料可以至少从两个角度去陈述．如果你保持头脑清醒的话。找你的导师谈谈这个问题。你应该可以重新组织你的文章，加人对那个人论文的讨论，并在同时体现出自己的研究与那个人的研究是有区别的。比如，他研究的社会群体可能和你研究的社会群体有所不同，如果是这样的话，你可以在论文中更加强调社会群体这个方面，而不是强调研究方法的新颖之处。事实上，通过将你的研究结果和其他人的研究结果进行比较和对比，你的论文可能会更加出色。
+答：不要慌。同样的材料可以至少从两个角度去陈述，如果你保持头脑清醒的话。找你的导师谈谈这个问题。你应该可以重新组织你的文章，加人对那个人论文的讨论，并在同时体现出自己的研究与那个人的研究是有区别的。比如，他研究的社会群体可能和你研究的社会群体有所不同，如果是这样的话，你可以在论文中更加强调社会群体这个方面，而不是强调研究方法的新颖之处。事实上，通过将你的研究结果和其他人的研究结果进行比较和对比，你的论文可能会更加出色。
 
 问：我写了一半，思路就被堵上了，我该怎么办？
 
@@ -270,4 +270,4 @@
 
 问：我可以按照你们写这本书的风格来写我的论文吗？
 
-答：你一定是在开玩笑。这本书采用的是我们喝咖啡谈话的风格，我们学术性文章的风格是与此非常、非常不同的．
+答：你一定是在开玩笑。这本书采用的是我们喝咖啡谈话的风格，我们学术性文章的风格是与此非常、非常不同的。
