--- a/10.qmd
+++ b/10.qmd
@@ -10,9 +10,9 @@
 
 ## 不要暴露弱点
 
-在鲨鱼聚集的水中游泳不是个好主意，尤其在水中有血的情况下。如果水中的血是你的．那就更糟了。这血会吸引鲨鱼来袭击你．同样的原则也适用于写作。具有批判性的读者在很远处就能觉察到水中的血腥味，于是会飞速游来捕获猎物。有时他们速战速决，但有时他们喜欢先和猎物挑逗一番。这可不是一件好玩的事。
+在鲨鱼聚集的水中游泳不是个好主意，尤其在水中有血的情况下。如果水中的血是你的，那就更糟了。这血会吸引鲨鱼来袭击你，同样的原则也适用于写作。具有批判性的读者在很远处就能觉察到水中的血腥味，于是会飞速游来捕获猎物。有时他们速战速决，但有时他们喜欢先和猎物挑逗一番。这可不是一件好玩的事。
 
-还有一个比喻也可以用来说明同样的问题，虽然它不及第一个比喻抢眼，但更直接贴切。那就是狼群的比喻。狼群在进攻前会先接近猎物，观察猎物是否显示出了任何弱栽。如果猎物看起来很健康、完全有能力自我防御，那么狼群就会立刻放弃捕获它的念头。如果动物看上去很虚弱．他们就会捕获它。如果你的论文（或者陈述发言）看起来质量很好、很专业，那么你就不会受到攻击或批评。如果存在着弱点，那么狼群就会快速展开围攻。试想一只肥硕的北美驯鹿在严酷的寒冬遭遇了狼群，狼群是不可能怜悯它，让它逃生的，而向你的批评者乞求怜悯和向真正的狼群乞求怜悯一样是没有用的。
+还有一个比喻也可以用来说明同样的问题，虽然它不及第一个比喻抢眼，但更直接贴切。那就是狼群的比喻。狼群在进攻前会先接近猎物，观察猎物是否显示出了任何弱栽。如果猎物看起来很健康、完全有能力自我防御，那么狼群就会立刻放弃捕获它的念头。如果动物看上去很虚弱，他们就会捕获它。如果你的论文（或者陈述发言）看起来质量很好、很专业，那么你就不会受到攻击或批评。如果存在着弱点，那么狼群就会快速展开围攻。试想一只肥硕的北美驯鹿在严酷的寒冬遭遇了狼群，狼群是不可能怜悯它，让它逃生的，而向你的批评者乞求怜悯和向真正的狼群乞求怜悯一样是没有用的。
 
 那么，你该怎么办呢？
 
@@ -49,7 +49,7 @@
 
 ## 了解你的敌人
 
-到了这个阶段，你应该要警惕你的敌人。你真正的敌人是那些读者可能将你与他们混淆起来的人。应该含蓄地，而非明确地告诉读者，你与他们是不同的。如果你明确地指出有哪些人与自己不能相提并论，那只能加深读者对你的坏印象，他们会认为你擅自做主，把自己放到高人一等的地位．但如果你能含蓄地表达这个意思，那就应该没有什么问题了。
+到了这个阶段，你应该要警惕你的敌人。你真正的敌人是那些读者可能将你与他们混淆起来的人。应该含蓄地，而非明确地告诉读者，你与他们是不同的。如果你明确地指出有哪些人与自己不能相提并论，那只能加深读者对你的坏印象，他们会认为你擅自做主，把自己放到高人一等的地位。但如果你能含蓄地表达这个意思，那就应该没有什么问题了。
 
 渴望成功的新手
 :   一类敌人就是那些没有深入阅读文献、犯典型的入门阶段错误的新手。你的论文需要发出强有力的信号，告诉读者你不属于那一类人。可以与专业人士喝杯咖啡聊一聊，让他们给你讲讲新手的典型错误有哪些。还有就是要全面深入地阅读文献，历史久远的文献也要读。你可能不相信，二十年前的文献对你也会有很大帮助——很多研究人员过于急功近利，往往没有耐心做基本的功课，结果却发现他们的研究前人早已做过了。没有什么东西可以长久地替代文献阅读，这本书里介绍的简便途径只是用来帮助你更有效地完成任务，而不是帮助你逃避任务。文献和研究方法一样，应该是你的朋友，你掌握的文献越多，你能自信地应付的问题也就越多。
@@ -98,7 +98,7 @@
 
 ### 我是个态度端正的专业人士（概念很简单，要为之付出的努力却很多）
 
-* 我注重细节．比如拼写正确和引用在全文中的分布合理；
+* 我注重细节，比如拼写正确和引用在全文中的分布合理；
 * 我做了所有该做的工作，并将其体现在成稿中；
 * 我细致专业地完成了研究的每个环节，并将其体现在了成稿中；
 * 我把我的研究清楚、完整地写在了论文里，论文符合我所在领域的写作惯例。
@@ -138,7 +138,7 @@
 * 对你所在学科的尊重；
 * 可发表性。
 
-让论文的形式和语言正确与让论文的内容正确一样重要——事实上．它们对内容的表达起到关键作用。如果你对此心存怀疑，牢记这条基本原则：论文应该能脱离作者独立表意如果评审人误解了其中的内容，责任在于作者，而非评审人。
+让论文的形式和语言正确与让论文的内容正确一样重要——事实上，它们对内容的表达起到关键作用。如果你对此心存怀疑，牢记这条基本原则：论文应该能脱离作者独立表意如果评审人误解了其中的内容，责任在于作者，而非评审人。
 
 博士论文被广泛认为是最高形式的学术写作，它对内容、准确性、论证以及对全文的统筹规划方面的要求都要高于对单独发表的学术文章的要求。它是一部“杰作”，这并不代表它是“完美作品”，而是意味着它包含的写作技巧、技能、形式和功能可以展示出一个学生的全部才华。
 
