--- a/11.qmd
+++ b/11.qmd
@@ -37,7 +37,7 @@
 :   让别人来扮演“誉写员”的角色，以你向他讲述的东西为基础写出一篇文章。誉写员可能很称职，也可能记录得不够准确，无论如何，他都给你提供了可以加以修改的材料。
 
 抛弃前半小时写的东西
-:   向自己保证．你会抛弃在前半小时写的任何东西。这意味着你可以在前半小时写一堆垃圾、一封给你母亲的信，或者对你心目中蓝图的描述－任何东西，只要是文字。关键是要开始组织句子和段落，而不关心质蜇如何。（如果写得好，你当然可以保留，写得不好，你保证过会儿扔掉它。）
+:   向自己保证，你会抛弃在前半小时写的任何东西。这意味着你可以在前半小时写一堆垃圾、一封给你母亲的信，或者对你心目中蓝图的描述－任何东西，只要是文字。关键是要开始组织句子和段落，而不关心质蜇如何。（如果写得好，你当然可以保留，写得不好，你保证过会儿扔掉它。）
 
 开始就是简单的打字
 :   有时候，逐渐启动身体各个系统也会对写作有帮助——比如，在开始时你要做的仅仅是敲击键盘，打出什么都行，目的只是为了让自已在键盘前调整到合适的坐姿，让自己的手指活动起来，接着你可以敲一点陈词滥洞到屏幕上，使从头脑到手指传输词句的通道流畅起来，然后再开始写文章。
@@ -114,7 +114,7 @@
 
 ### 普遍性建议
 
-* 写作是一项技能．和所有其他技能一样，写作也是熟能生巧的。
+* 写作是一项技能，和所有其他技能一样，写作也是熟能生巧的。
 * 向自己保证，必须每天都练习写作，每周完成一篇两三页左右的文章。
 * 将研究材料以书面形式带到导师辅导课上。
 * 有人对你的文章提出批评时，花时间分析一下他们的批评：为什么他们提出这样的评论或修改意见？
