--- a/12.qmd
+++ b/12.qmd
@@ -2,7 +2,7 @@
 
 这一章讨论的是“现场”陈述报告（presentation），比如研讨会或会议上的发言。这方面的某些问题与写作也有关系——比如，如何建设性地对待批评意见，不论是来自观众中的批评意见（“现场”陈述）还是评审人的批评意见（书面作品）。
 
-在陈述报告时有两件事你必须注意。第一就是内容与形式的区别．第二是我们提到过的三条黄金法则：不要撒谎，不要故作幽默，以及最重要的一条不要惊慌失措而在压力下吐露真相。
+在陈述报告时有两件事你必须注意。第一就是内容与形式的区别，第二是我们提到过的三条黄金法则：不要撒谎，不要故作幽默，以及最重要的一条不要惊慌失措而在压力下吐露真相。
 
 ## 内容与形式
 
@@ -20,11 +20,11 @@
 
 在内容方面容易犯的经典错误很多。其中之一就是错误判断你在规定时间内能够讲的内容。避免这个问题最好的办法就是事先演练讲话并给自己计时，然后根据情况添加或删除内容，再次演练，直到时间恰好为止。这种方法对于较短的陈述报告非常有效。如果发言时间较长，比如要一小时，那么反复演练会很累人，这种情况下更好的办法是在演练一遍之后根据需要调整材料的数量，并事先拟定一个计划：如果到时候时间不够，将略去哪些内容；时间有余，将添加哪些内容。
 
-要控制好时间有一个小诀窍，你可以事先计划好在什么时候应该讲到哪个内容，并把计划好的讲话进度写在纸上（比如，“10:15，展示关于软件失败率的幻灯片”），做陈述报告时你就可以参考这页纸，以确认自己是否跟上了进度。对于较短的陈述报告，认真地进行演练可以有效地控制好时间。我们中有人曾在应聘时被要求做八分钟的陈述报告，能否掌握好时间也是考察的能力之一。我们的策略是在事先进行若干遍演练，调整材料，直到将陈述报告时间控制在七到九分钟之间。当真正的陈述报告到来时，我们故意不看表，而是通过观察听众的面部表情来估计还剩多少时间，结果我们在离规定结束时间还有儿秒钟的时候完成了我们的陈述报告，并使听众感觉我们根本不需要看表就能掌握好时间．故意卖弄？是的。但这却给听众留下了好印象——大多数发言人在八分钟的时间段里就算看表也难以把握好时间，不看表就能控制好时间体现了我们具有专业级的技能。
+要控制好时间有一个小诀窍，你可以事先计划好在什么时候应该讲到哪个内容，并把计划好的讲话进度写在纸上（比如，“10:15，展示关于软件失败率的幻灯片”），做陈述报告时你就可以参考这页纸，以确认自己是否跟上了进度。对于较短的陈述报告，认真地进行演练可以有效地控制好时间。我们中有人曾在应聘时被要求做八分钟的陈述报告，能否掌握好时间也是考察的能力之一。我们的策略是在事先进行若干遍演练，调整材料，直到将陈述报告时间控制在七到九分钟之间。当真正的陈述报告到来时，我们故意不看表，而是通过观察听众的面部表情来估计还剩多少时间，结果我们在离规定结束时间还有儿秒钟的时候完成了我们的陈述报告，并使听众感觉我们根本不需要看表就能掌握好时间，故意卖弄？是的。但这却给听众留下了好印象——大多数发言人在八分钟的时间段里就算看表也难以把握好时间，不看表就能控制好时间体现了我们具有专业级的技能。
 
-涉及内容的经典问题还有很多。最常见的一个问题是如何选择难度适宜的材料来陈述报告。如果你的发言技术含量很高，而你的听众对你讲的领域却只有一点肤浅的了解，那么你的发言很可能会让他们感到百无聊赖。相反，如果你对一群内行讲很基本的东西，这将使听众和你自己都显得尴尬。最好的策略是与活动主办方联系．事先了解听众的程度。大多数的主办方都会很乐意帮助你，他们会认为你在事先询问体现了你具有高度的专业精神。
+涉及内容的经典问题还有很多。最常见的一个问题是如何选择难度适宜的材料来陈述报告。如果你的发言技术含量很高，而你的听众对你讲的领域却只有一点肤浅的了解，那么你的发言很可能会让他们感到百无聊赖。相反，如果你对一群内行讲很基本的东西，这将使听众和你自己都显得尴尬。最好的策略是与活动主办方联系，事先了解听众的程度。大多数的主办方都会很乐意帮助你，他们会认为你在事先询问体现了你具有高度的专业精神。
 
-与此相关的一个问题是，关于你所要讲的话题，听众已经知道了多少．同样的．你应该询问会议组织者。这样一来．如果你得知你要讲的话题是听众熟悉的．你就可以在陈述报告中加人大抵的细节来显示你对该领域的了解，然后再把讲话的重心迅速转移到听众较为生疏的内容上去。
+与此相关的一个问题是，关于你所要讲的话题，听众已经知道了多少。同样的，你应该询问会议组织者。这样一来，如果你得知你要讲的话题是听众熟悉的，你就可以在陈述报告中加人大抵的细节来显示你对该领域的了解，然后再把讲话的重心迅速转移到听众较为生疏的内容上去。
 
 指导如何做商业报告和公共演说的文章往往强调，陈述报告必须要有趣味性。要达到趣味性又往往暗示着，技术细节必须减到最少，并且要用简单的英语讲。然而对于学术报告，这并不是明智之举。
 
@@ -46,7 +46,7 @@
 
 **在形式方面容易犯的典型错误**
 
-大部分没经验的发言者总是以紧张的微笑来开始他们的讲话，接着他们往往又会在使用视觉和听觉设备时遇到问题，把自己弄得更加尴尬。在事先熟悉一下你将要使用到的设备是个很好的主意——要尽可能掌握更多设备。另外，要做好设备出故障的准备，拥有后备方案——比如你在陈述报告时要用到PowerPoint，为了防止由于PowerPoint出故障而使你的发言不能继续，你应该另外准备一些使用高射投影仪播放的幻灯片，作为保险起见的后备方案。我们中有人曾担任过科学学科硕士论文的答辩评审人。该答辩包括每人15分钟的口头陈述报告。在一位考生做陈述报告时，高射投影仪出现了故障，于是更换了另一台高射投影仪，考生在这个过程中没有慌张失措，仍然继续陈述报告。第二台高射投影仪不一会儿也坏了，考生还是没有慌张，在第三台投影仪被换上时完成了他的陈述报告。就算是用专家们的苛刻标准来衡量，这名考生的表现也是不俗的，它传达出了很多正面信息。连遭两部机器故障的概率很低，但一部机器出现故障的可能性则不小．所以你应该有所准备，以便到时能够沉着应对。
+大部分没经验的发言者总是以紧张的微笑来开始他们的讲话，接着他们往往又会在使用视觉和听觉设备时遇到问题，把自己弄得更加尴尬。在事先熟悉一下你将要使用到的设备是个很好的主意——要尽可能掌握更多设备。另外，要做好设备出故障的准备，拥有后备方案——比如你在陈述报告时要用到PowerPoint，为了防止由于PowerPoint出故障而使你的发言不能继续，你应该另外准备一些使用高射投影仪播放的幻灯片，作为保险起见的后备方案。我们中有人曾担任过科学学科硕士论文的答辩评审人。该答辩包括每人15分钟的口头陈述报告。在一位考生做陈述报告时，高射投影仪出现了故障，于是更换了另一台高射投影仪，考生在这个过程中没有慌张失措，仍然继续陈述报告。第二台高射投影仪不一会儿也坏了，考生还是没有慌张，在第三台投影仪被换上时完成了他的陈述报告。就算是用专家们的苛刻标准来衡量，这名考生的表现也是不俗的，它传达出了很多正面信息。连遭两部机器故障的概率很低，但一部机器出现故障的可能性则不小，所以你应该有所准备，以便到时能够沉着应对。
 
 你在陈述报告开始前常会先介绍自己，一般情况下你会向听众展示一张写有你姓名和所在院校的幻灯片，你可以借此机会调整设备的焦距，并给自己找到一个合适的站立位置。最典型的错误是站在观众和你的幻灯片之间，因为这样会使你自己的阴影投射到屏幕上，同时幻灯片上的表格又会投射到你整张脸上。你应该形成习惯站在屏幕的一侧，并利用自己的阴影来指示幻灯片上的部分内容。
 
@@ -92,7 +92,7 @@
 
 参加别人的陈述报告会，尤其是在新学期的头两周参加此类活动，也是一个很好的机会，可以从中了解这类场合的礼节和惯例。看到别人因为一个幼稚的问题或幼稚的发言而被攻击是很痛苦的，但要比亲身经历这类情形好受多了。你也可以在这种场合了解到你的同辈研究员对于某些行为的看法，比如坐在听众席上睡着了（通常被认为是不礼貌的行为，但有时也被当做是对讲话人的蓄意侮辱），问一些带敌意的问题（有的认为这很不应该，还有的则认为这是一门艺术）以及坐在听众席上编织毛衣（对它的看法非常不明确，褒贬兼有）。
 
-经常碰面的听众（比如在系里的讨论会上，或定期举行的高端会议上）往往表现出在外人看来不易理解的奇怪行为，这有群体动力和历史两方面的原因。比如一名资深学者可能会去攻击一个善良无辜的学生做的陈述报告，尽管陈述报告本身并不针对任何人．那名学者这样做的原因其实是因为他与学生导师之间有长期未化解的私仇。这又会导致学生导师的报复行动，于是没过多久，场面就变得好像一部意大利的美国西部片前一分钟还是慷懒的墨西哥午后，后一分钟却已是尸骸遍地。有意思的是，在座的其他听众并不知道会场上正在进行两方面的交火，因为攻击的火药藏在学术语言的背后，外人无法察觉。
+经常碰面的听众（比如在系里的讨论会上，或定期举行的高端会议上）往往表现出在外人看来不易理解的奇怪行为，这有群体动力和历史两方面的原因。比如一名资深学者可能会去攻击一个善良无辜的学生做的陈述报告，尽管陈述报告本身并不针对任何人，那名学者这样做的原因其实是因为他与学生导师之间有长期未化解的私仇。这又会导致学生导师的报复行动，于是没过多久，场面就变得好像一部意大利的美国西部片前一分钟还是慷懒的墨西哥午后，后一分钟却已是尸骸遍地。有意思的是，在座的其他听众并不知道会场上正在进行两方面的交火，因为攻击的火药藏在学术语言的背后，外人无法察觉。
 
 ### 如果有必要的话可以回避问题
 
