--- a/13.qmd
+++ b/13.qmd
@@ -226,7 +226,7 @@ n$\geq$50：调查研究
 致谢
 :   你应该肯定和承认别人作出的贡献。这包括领域内在你之前的研究者、为你的研究提供过帮助的人、与你在研究上有过合作的人、帮助你准备研究设备的技术人员和为你的数据分析提供意见的统计员。当某人对你研究作出的贡献构成了研究一个不可忽略的部分时，他就有权利成为研究论文的合著者。但如果某人对你研究的贡献只是他日常工作的一部分，他不对总体研究设计和研究性质有任何贡献，并且只按照研究者的具体指示来作出他的贡献（比如按照研究者需要的设备要求来准备实验器械的技术人员），那么一般只在致谢中肯定他的贡献，而不给予合著者身份。
 
-    在这方面，涉及研究助理的情况没有清晰的界定，常常导致关于研究项目的激烈争执。如果你是研究者，花了数年的时间发展出了一套理论体系，你不愿意把发表的第一篇作品的第一作者身份拱手让给那个在你聘用他前对相关领域一无所知的研究助理，这是可以理解的。但如果站在研究助理的立场上考虑，他完成了很大一部分研究设计，实际执行了调查和分析，写了论文的第一稿，如果作了那么多贡献却被剥夺作者的身份，那也实在是说不过去的．
+    在这方面，涉及研究助理的情况没有清晰的界定，常常导致关于研究项目的激烈争执。如果你是研究者，花了数年的时间发展出了一套理论体系，你不愿意把发表的第一篇作品的第一作者身份拱手让给那个在你聘用他前对相关领域一无所知的研究助理，这是可以理解的。但如果站在研究助理的立场上考虑，他完成了很大一部分研究设计，实际执行了调查和分析，写了论文的第一稿，如果作了那么多贡献却被剥夺作者的身份，那也实在是说不过去的。
 
 知识产权
 :   知识产权是个正在高速发展的领域，尤其是对于律师们来说。它涉及的问题是哪一方拥有对某个想法的占有权，并有权通过实践这个想法获利。这个问题也没有清晰的界定。如果你花了20年的时间研究老年痴呆症，并在进入圣温妮弗莱德大学（St Winnifred College）工作后的第三个星期终于有了重大发现，那么如果你所在的大学以你正在为其工作为由声称他们对你的发现享有知识产权，那么你一定不会太乐意。如果你所在的大学因为你的这项发现而获得了巨大的利益，成为世界上最富的大学之一，你却没有得到一分钱的好处，你当然会更不乐意。反过来，如果你是拉特兰大学（Rutland University）的副校长，长期以来一直致力于筹集资金促进大学在艾滋病治疗方面的研究，那么如果有个新来的教员忽然自建门户，在学校研究的基础上发展出自己的公司赚钱，你大概也会不高兴。还有一种情况，如果你在15年的研究过程中更换了若干个研究助理，那么在得到最后的研究成果时，你15年前的研究助理是否与你刚聘用的研究助理一样有权分享研究成果带来的利益呢？没有人能够说清楚这个问题。
