--- a/14.qmd
+++ b/14.qmd
@@ -14,7 +14,7 @@
 
 ### 啄木鸟的故事
 
-安全头盔的开发者们决定到自然中寻找新设计方案的灵感。他们中的一个人想知道是否有某种动物，在头部经受了有力打击之后，还不会感到痛苦或者遭遇脑损伤。灵感来了，是啄木鸟。在啄木鸟醒着的时候，它大量的时间都用在用相当大的力量来敲击树木，这样会对头部造成撞击。小组因此研究啄木鸟的身体结构，发现在头和喙相连的部分有海绵状器官，吸收了部分撞击的力扯．小组应用这一灵感设计出一款头盔，此设计不是为防止物体击穿头盔，而是通过将头盔变形的方式，将头盔设计为可以吸收来自突然袭击的力董，吸收正在朝向佩戴者头部的大量能量。设计者很自豪地展示了他们的设计理念。故事中，在这个时候，观众中的一员问：“你怎么就知道啄木鸟不会头疼呢？”接下来就是痛苦的沉默。
+安全头盔的开发者们决定到自然中寻找新设计方案的灵感。他们中的一个人想知道是否有某种动物，在头部经受了有力打击之后，还不会感到痛苦或者遭遇脑损伤。灵感来了，是啄木鸟。在啄木鸟醒着的时候，它大量的时间都用在用相当大的力量来敲击树木，这样会对头部造成撞击。小组因此研究啄木鸟的身体结构，发现在头和喙相连的部分有海绵状器官，吸收了部分撞击的力量。小组应用这一灵感设计出一款头盔，此设计不是为防止物体击穿头盔，而是通过将头盔变形的方式，将头盔设计为可以吸收来自突然袭击的力董，吸收正在朝向佩戴者头部的大量能量。设计者很自豪地展示了他们的设计理念。故事中，在这个时候，观众中的一员问：“你怎么就知道啄木鸟不会头疼呢？”接下来就是痛苦的沉默。
 
 在蘑菇的故事中，学生没能识别出相关的变量（中央供暖）。在啄木鸟的故事中，设计小组没有检测关键性假设（啄木鸟不会脑损伤）。事实上，啄木鸟的故事有一个很好的结局，现有的设计被证明是好的，设计者是对的，尽管如此，就我们所知，还没有人检测到啄木鸟的脑损伤率口然而，在另一个案例中，未经检验的假设导致数年时间浪费在无意义的研究上，这么长的时间本可以用在更有用的研究领域。
 
@@ -81,7 +81,7 @@
 
     如果大家达成共识认为你必须做一些修改，好的评审人会列出一张清单，这或许是一张手写的清单，或者是一份在一两天之后用电子邮件发给你的清单。
 
-    如果没有达成共识，那么评审人必须在他们自己中间协调一致。在这个时候．你之前的其他努力会体现其价值，例如．如果你写了大量的不错的期刊文章，那么这证明你的工作质量有足够的专业性的．就算毕业论文写得不怎么样，对任何一个想说明你的论文有不错内容的人而言这都会增加你的筹码。同样，如果你写了一份很好的文献综述，就算你的数据收集有一点不完整，那么也能表示你已具备本领域内的专业知识。这两个例子中都需要工作尽早开始，都不是你能在最后一周进行修补的工作。在你做博士的一年或者之前的时间，阅读你的机构内部的规则．让一些人帮忙把他翻译成英语，这样你能找到在这些论文中可接受质量的标准。例如，如果有关“同行评议期刊发表标准”，在这种期刊上发表文章会在答辩之后裁决有争议的时候帮助你。
+    如果没有达成共识，那么评审人必须在他们自己中间协调一致。在这个时候，你之前的其他努力会体现其价值，例如，如果你写了大量的不错的期刊文章，那么这证明你的工作质量有足够的专业性的。就算毕业论文写得不怎么样，对任何一个想说明你的论文有不错内容的人而言这都会增加你的筹码。同样，如果你写了一份很好的文献综述，就算你的数据收集有一点不完整，那么也能表示你已具备本领域内的专业知识。这两个例子中都需要工作尽早开始，都不是你能在最后一周进行修补的工作。在你做博士的一年或者之前的时间，阅读你的机构内部的规则，让一些人帮忙把他翻译成英语，这样你能找到在这些论文中可接受质量的标准。例如，如果有关“同行评议期刊发表标准”，在这种期刊上发表文章会在答辩之后裁决有争议的时候帮助你。
 
     在所有这些完成之后，评审人会就你的下一阶段事项和你的导师达成一致，并且把你叫回来。如果你能通过，他们会向你表示祝贺。这时你的朋友可能已经准备好了香殡。这一天会过得很充实，你生命中接下来的日子将会阳光灿烂。
 
@@ -103,7 +103,7 @@
 
 在答辩开始的时候，如果需要的话，礼貌地做你的准备并且保持安静。如果你没有被要求做陈述或者概述，也不要烦恼：模拟答辩的时间没被浪费，因为这会有助于你在答辩期间非常有效地整理你关于全篇论文的思路。
 
-答辩很像击剑训练，答辩会用来评估你的击剑技巧，你需要用防御的方式证明你的剑术技巧。你既不需要让你的对手每一次都击中，也不会有人期待你能把你的对手一次扎个窟隆，然后一直扎到死。重要的是你怎样回答问题．不是你是否恰好知道正确的答案。在这个意义上，通常没有一个明确的标准答案。
+答辩很像击剑训练，答辩会用来评估你的击剑技巧，你需要用防御的方式证明你的剑术技巧。你既不需要让你的对手每一次都击中，也不会有人期待你能把你的对手一次扎个窟隆，然后一直扎到死。重要的是你怎样回答问题，不是你是否恰好知道正确的答案。在这个意义上，通常没有一个明确的标准答案。
 
 另外，你没有必要立刻回答。你可以使用技巧给自己争取一些思考时间，诸如，用一种思考的方式说“嗯”，说“那是个有趣的问题”或“我需要考虑一下”等。
 
@@ -123,7 +123,7 @@
 
 一旦你的修改得到批准，你就可以做毕业的准备了。大多数机构都会允许你在毕业典礼上请两个客人。许多博士候选人都希望有一张好的穿博士服的照片，那么可去租借一周学位服（比租借一天要明智得多）。然后就可以拍一些好看的照片了。
 
-所有的这些结束之后，你或者再也不想看一遍你的论文，甚至恨不得把它烧成灰。别那么做．这篇论文就像一张面具：你只看见了里面的缺点，而外面的人看到的是它闪闪发亮的外表。
+所有的这些结束之后，你或者再也不想看一遍你的论文，甚至恨不得把它烧成灰。别那么做，这篇论文就像一张面具：你只看见了里面的缺点，而外面的人看到的是它闪闪发亮的外表。
 
 ## 答辩的一些注意事项
 
