--- a/15.qmd
+++ b/15.qmd
@@ -35,7 +35,7 @@
 
 人们为什么要组织学术会议？主要原因有三，即利益、荣誉和对学科的益处。一个好的学术会议会给有关的组织机构带来相当丰厚的利润。并且能够给学术组织者带来荣誉和权力（至少在学术圈子之中）。一个组织周密的学术会议是振兴一个走向没落的研究学科的最佳方式，也是开拓新的研究领域的方式。
 
-因此，如果你想要开创一个新的研究领域，或者振兴已有的研究领域，你或许就需要组织学术会议。一个需要抓住的重要问题就是怎样吸引足够多的人来参加会议。一个标准的解决方案就是邀请一些重要的演讲者．他们的演讲会吸引其他人前来。如果有一个或者更多的著名演讲者的演讲既总结了这一领域的现有状态，又提出一些有趣的新思想，那么参会人数就不用担心了。一个好的开会地点会是另一个吸引参会者的要素。第三个吸引人的经典方式就是出版会议论文集，另外和某个期刊的编辑达成协议，把参会的最佳文章在这个期刊的特刊上发表。这会成为吸引部门基金资助会议的有利条件。如果多个研究者同一时段申请同样数鼠的基金用来召开学术会议，然而不可能都申请到基金，那么依据顺序可能得到基金的研究者如下：计划出版论文集和特刊的研究者作为第一选择，仅仅出版论文集的研究者作为第二选择，不出版论文集的研究者作为第三选择。
+因此，如果你想要开创一个新的研究领域，或者振兴已有的研究领域，你或许就需要组织学术会议。一个需要抓住的重要问题就是怎样吸引足够多的人来参加会议。一个标准的解决方案就是邀请一些重要的演讲者，他们的演讲会吸引其他人前来。如果有一个或者更多的著名演讲者的演讲既总结了这一领域的现有状态，又提出一些有趣的新思想，那么参会人数就不用担心了。一个好的开会地点会是另一个吸引参会者的要素。第三个吸引人的经典方式就是出版会议论文集，另外和某个期刊的编辑达成协议，把参会的最佳文章在这个期刊的特刊上发表。这会成为吸引部门基金资助会议的有利条件。如果多个研究者同一时段申请同样数鼠的基金用来召开学术会议，然而不可能都申请到基金，那么依据顺序可能得到基金的研究者如下：计划出版论文集和特刊的研究者作为第一选择，仅仅出版论文集的研究者作为第二选择，不出版论文集的研究者作为第三选择。
 
 我们将略过后勤保障过程而将精力集中在有关的文章和论文集上。如果你正组织一个出版论文集的学术会议，那么你就需要与出版商取得联系，这能迅速提升参与者的兴趣。同时也需要提出限制有关字数长短、截稿日期等的内容的要求。出版商们有其工作的统一要求而不是为某客户定制规则。因此，如果你由于没有准备好论文副本，错过了一个出版时间，你就需要再找另外一家。这会让你花更多的钱。因此你要确保演讲者能够及时地提供正确版本。对于许多学术会议，论文集在大会之前就已经印好了，以便于代表们听演讲的同时有论文集可看。这就有确定的截稿日期，因此，作为一名组织茬你不会同情不能及时提交论文或者没有以正确的格式通过电子邮件提交的作者们。
 
@@ -86,7 +86,7 @@
 * 养成习顷每天同不同的人在一起吃午餐。
 * 当你在与别人对话的时候，避免滔滔不绝或者用你的观点来取悦别人，这时候问题往往比陈述要有效得多。
 
-写好自己的简短介绍并记在心中。（例如简单说清楚你是谁．你在研究什么）。
+写好自己的简短介绍并记在心中。（例如简单说清楚你是谁，你在研究什么）。
 
 ### 如何保持联系
 
