--- a/16.qmd
+++ b/16.qmd
@@ -148,7 +148,7 @@
 * 找到一些人给毕业班和科学硕士学生教授复杂内容；
 * 找到一个安全的好搭档，能够帮助系里解决问题；
 * 找到一个能够使下一次研究评估成绩更好的人；
-* 为自己找一个同盟者．以应对同学院的其他成员的长期权力斗争；
+* 为自己找一个同盟者，以应对同学院的其他成员的长期权力斗争；
 * 找一些让人高兴的人，去平衡讨厌的琼斯（Jones）教授和韦斯特（West）博士的存在。
 * 确定他们没有聘任任何像琼斯教授和韦斯特博士一样的人。
 
@@ -236,7 +236,7 @@
 
 你需要接受的第一件事情就是做事要花时间。时间有不同种类，包括消磨掉的时间和工作时间。大多数事情本身只占用很短的一段时间（工作时间），但是会有很多等待行动开始的时间（消磨掉的时间）。例如，你正在通过电子邮件同某人沟通某件事情。实际的信息交流仅仅需要在键盘上花费五分钟，但是作出安排消磨的时间需要好几天来协调一个大家都有空的时间。因此，慢下来，停止冲刺，再慢一些。然后你才能更好地做一些理性的计划。
 
-理性计划与所谓的替代活动（displacement activity）和表现性行为是非常不同的活动。当你被生活的琐事和烦乱拖累得筋疲力尽的时候，常常很难做出理性计划。所以首先要做得最好的事情是给你自己买一些时间．计划给你自己买更多的时间，通过努力获得更多的时间。你怎样做这件事呢？可笑的是，一个好的开始是通过替代活动来争取时间。一次，我们中的一个人从他的导师那里得到一些非常明智的建议，说的是如果你正在从事一项替代活动，你应该确信那是一个有用的替代活动。以下就是一些有用的替代活动。
+理性计划与所谓的替代活动（displacement activity）和表现性行为是非常不同的活动。当你被生活的琐事和烦乱拖累得筋疲力尽的时候，常常很难做出理性计划。所以首先要做得最好的事情是给你自己买一些时间，计划给你自己买更多的时间，通过努力获得更多的时间。你怎样做这件事呢？可笑的是，一个好的开始是通过替代活动来争取时间。一次，我们中的一个人从他的导师那里得到一些非常明智的建议，说的是如果你正在从事一项替代活动，你应该确信那是一个有用的替代活动。以下就是一些有用的替代活动。
 
 ### 有用的替代活动
 
@@ -257,7 +257,7 @@
 
     你可以看一些关于计划、时间管理和自我发展的好书。这些书可以帮助你进行中期规划，并更好地发展自我。你可能发现满怀希望开始尝试，但却又慢慢回到原来的坏习惯中去了。对这件事你能做的就是开始时保持可控制的尺度，不要一次尝试太多。或者尝试不同的方法直到找到适合你的为止。例如，对一些涉及了太多不可预见的问题的工作，传统的时间管理方式不太合适。在这样的状态下，你必须要做的是重点管理，这涉及一系列不同的技能。另外，你找到的划分时间的方式（例如，把一天规划成若于个时间段）不适合你个人的情况，那么尝试别的方式。
 
-    关于长期计划要记住的主要事情是，你可以改变长期计划，定时升级是个好办法。当你开始制订计划的时候，你不可能知道你不知道什么。你不可能实际地计划你的生涯．直到你在这个领域内工作足够长时间之后你才能知道这是否真的是你一生想要做的。把你自已完全托付给一个职业计划，以至于认为没有它你的生活会变得完全没有意义，这是愚蠢的。尽管如此，你可以按一生的主要时段做一个大致的计划。
+    关于长期计划要记住的主要事情是，你可以改变长期计划，定时升级是个好办法。当你开始制订计划的时候，你不可能知道你不知道什么。你不可能实际地计划你的生涯，直到你在这个领域内工作足够长时间之后你才能知道这是否真的是你一生想要做的。把你自已完全托付给一个职业计划，以至于认为没有它你的生活会变得完全没有意义，这是愚蠢的。尽管如此，你可以按一生的主要时段做一个大致的计划。
 
     你希望自己死的时候是什么样子？你想自已被人记住吗？而且，最重要的是，你想怎样回顾你的一生？你不想回顾到一大堆“如果……该有多好”的想法和未实现的梦想。考虑一下你想回顾到什么样的成就和记忆，然后，你就可以开始考虑怎样实现。如果你是理性的，意志坚定的，并且坚持尝试，没有什么事是不可能的。
 
