--- a/glossary.qmd
+++ b/glossary.qmd
@@ -21,7 +21,7 @@ Eyeballing the data
 :   浏览原始数据，这样做在分析数据的时候是十分有意义的。如果数据处理的结果和你浏览时的印象不一致，那么很可能在处理数据的过程中出现了错误。而错误是会经常发生的，所以浏览是个好习惯。
 
 Funded research project
-:   有资助的研究项目。如果研究项目需要资金，可以向多方申请。这些基金少则几百英镑，用于差旅或者设备费用；多则上百万英镑，来建立一个研究机构．此类项目普遍采用的形式是：聘用一位项目助理一到两年的时间，由他来管理这笔资金下的研究项目。这是大学资金的来源之一，也是研究项目中很重要的部分。
+:   有资助的研究项目。如果研究项目需要资金，可以向多方申请。这些基金少则几百英镑，用于差旅或者设备费用；多则上百万英镑，来建立一个研究机构。此类项目普遍采用的形式是：聘用一位项目助理一到两年的时间，由他来管理这笔资金下的研究项目。这是大学资金的来源之一，也是研究项目中很重要的部分。
 
 Good Thing
 :   来源于《1066 and All That》这本书，是对流行事物的一种反讽说法，暗示其将很快被别的事物所取代。
