--- a/07.qmd
+++ b/07.qmd
@@ -56,7 +56,7 @@
 
 概念展示型论文与很多其他类型的论文都有重叠，尤其是方法导向型论文。概念展示型的论文是为了向读者展示一个特定的概念（通常是一种方法，但也有例外——比如也可以是一种概念性框架）是可行的、有用的、有趣的。这类论文在申请研究经费时很管用。
 
-如果你很清楚你要论证的是什么．该用什么方法去论证，那么只需要来自一个样本的一组数据就可以完成一篇概念证明型的论文。写这类论文最难的还是要找到一个好的概念。
+如果你很清楚你要论证的是什么，该用什么方法去论证，那么只需要来自一个样本的一组数据就可以完成一篇概念证明型的论文。写这类论文最难的还是要找到一个好的概念。
 
 ## 以上几类论文都会使用到的研究方法
 
