--- a/08.qmd
+++ b/08.qmd
@@ -20,7 +20,7 @@
 
 考虑了以上这些因素之后，你需要做一些基本的功课，而忽视这些基本功课的人在所有有志成为学者的人群中占惊人的比例。第一项功课就是阅读你所选的期刊为其投稿人写的投稿须知。投稿须知一般会印在期刊上，发布在期刊的网站上，或者从期刊的编辑那里得到。从投稿须知中，你能了解到文章的字数限制、图表的制作流程，以及你需要寄出的论文复印件的份数。这些规定都是有意义的。如果你遵守这些规定，编辑对你持正面看法的可能性就会高些。无端地和编辑对着干是愚蠢的。以下我们将会解释每一条规定的设定目的，并给出提高投稿命中率的若干办法。
 
-期刊的侧重点非常重要。期刊必须有侧重点，因为研究论文的数量实在太多了——即使是专业性很强的期刊也会因为版面限制而不得不拒绝极大比例的优秀论文。（期刊编辑每年编辑多少文章受页数预算控制，于是一年中能得到发表的文者也因此受到限制。）所以．你应该确保你写的文章内容符合你选定的期刊的侧重点。如果你不确定，可以联系编辑咨询相关问题（要注意礼貌）。学术期刊编辑与商业性刊物的编辑不同，他们在各自的研究领域通常扮演着举足轻重的角色，他们将最终决定你的论文是否为期刊所接受。如果你很有技巧或很走运，编辑可能会喜欢你论文文字背后的思想，并会在怎样表达这个思想方面给你有用的建议（比如哪个主题需要强调，哪个主题需要低调处理）。这些建议很重要，值得你严肃认真地考虑（但你还是要记住，听从建议并不是成功的保证）。
+期刊的侧重点非常重要。期刊必须有侧重点，因为研究论文的数量实在太多了——即使是专业性很强的期刊也会因为版面限制而不得不拒绝极大比例的优秀论文。（期刊编辑每年编辑多少文章受页数预算控制，于是一年中能得到发表的文者也因此受到限制。）所以，你应该确保你写的文章内容符合你选定的期刊的侧重点。如果你不确定，可以联系编辑咨询相关问题（要注意礼貌）。学术期刊编辑与商业性刊物的编辑不同，他们在各自的研究领域通常扮演着举足轻重的角色，他们将最终决定你的论文是否为期刊所接受。如果你很有技巧或很走运，编辑可能会喜欢你论文文字背后的思想，并会在怎样表达这个思想方面给你有用的建议（比如哪个主题需要强调，哪个主题需要低调处理）。这些建议很重要，值得你严肃认真地考虑（但你还是要记住，听从建议并不是成功的保证）。
 
 ### 关于递交材料的要求
 
@@ -28,7 +28,7 @@
 
 由于页数限制的原因，字数限制是很重要的一个方面。编辑可能需要在刊登一篇字数较多的文章还是在一期中挤进两篇字数较少的文章中做出选择。他们会很注意文章的页数多少。编辑会根据你文章的字数（包括图表）来计算版面数，而不是根据你的文章打印稿的纸张页数。所以调整字体和页边空白骗不了编辑。
 
-你的文章通过了这第一道检验之后，编辑会将原件寄给审阅人，以征求他们的意见。这方面的流程各个期刊有所不同。大多数会寄去纸样，因为审阅人往往喜欢在纸上作注，而电子文档意味着他们还要将论文打印出来，而且论文的格式和字体还可能不符合他们的要求。编辑的通常做法是，他们会让投稿人提供足够的原件供审阅人使用，另外再提供一份原件供编辑自己归档保存。如果有两个审阅人，编辑会要求你寄出三份原件。我们曾经遇到过一份期刊，要求投稿人寄出八份原件。如果你寄出的原件数目不够，编辑就不得不替你复印。他们可有很多比复印你的文章更重要的事要做，所以寄出规定数目的原件是很有必要的。有一些期刊要求投稿人寄电子版的文稿。如果你寄去的电子文档是用Grunt2004格式或其他某个不适用于他们所使用的系统的格式写的．那他们就不可能对你的投稿感兴趣。你可以为自己辩护，说自己使用的格式在技术上比其他人使用的格式更加先进，但编辑们对你的辩解基本上不会感兴趣。同样的，如果你向一家要求用原件投稿的期刊寄去了一份电子文档．那么编辑们可能也不会考虑把你加到他们的通讯簿上去——电子文档原则上说是个很不错的主意，但现实与原则有时很不一样。
+你的文章通过了这第一道检验之后，编辑会将原件寄给审阅人，以征求他们的意见。这方面的流程各个期刊有所不同。大多数会寄去纸样，因为审阅人往往喜欢在纸上作注，而电子文档意味着他们还要将论文打印出来，而且论文的格式和字体还可能不符合他们的要求。编辑的通常做法是，他们会让投稿人提供足够的原件供审阅人使用，另外再提供一份原件供编辑自己归档保存。如果有两个审阅人，编辑会要求你寄出三份原件。我们曾经遇到过一份期刊，要求投稿人寄出八份原件。如果你寄出的原件数目不够，编辑就不得不替你复印。他们可有很多比复印你的文章更重要的事要做，所以寄出规定数目的原件是很有必要的。有一些期刊要求投稿人寄电子版的文稿。如果你寄去的电子文档是用Grunt2004格式或其他某个不适用于他们所使用的系统的格式写的，那他们就不可能对你的投稿感兴趣。你可以为自己辩护，说自己使用的格式在技术上比其他人使用的格式更加先进，但编辑们对你的辩解基本上不会感兴趣。同样的，如果你向一家要求用原件投稿的期刊寄去了一份电子文档，那么编辑们可能也不会考虑把你加到他们的通讯簿上去——电子文档原则上说是个很不错的主意，但现实与原则有时很不一样。
 
 有些期刊使用双重匿名的评审（double-blind reviewing）方式，有些不采用这种方式。双重匿名的意思是：审阅人不知道文章作者是谁，你也不知道审阅人是谁。为了这个目的，投稿须知中可能会要求你将你的姓名和联系方式单独写在另一张纸上，与论文分开，这样寄论文给审阅人之前，编辑就可以将这页纸取下来。编辑可不愿意因为你在论文里留下了不应该留的姓名，而把半个上午用在涂修正液上。
 
