Fix errors in chapter 9
Signed-off-by: Liang Zhang <psychelzh@outlook.com>

--- a/09.qmd
+++ b/09.qmd
@@ -76,7 +76,7 @@
 * 涉及两个彼此不相关的主题；
 * 没有形成一个完整的体系（也就是说，没有回到理论上去，没有体现出问题是怎样被解决的，没有将研究结果与研究目的联系起来）。
 
-## 学位论文的常见问题、核对清单以及一些你应该间自己的问题
+## 学位论文的常见问题、核对清单以及一些你应该问自己的问题
 
 ### 长度
 
@@ -97,7 +97,7 @@
 
 标题是论证过程的“指示牌”：它们应该体现论文的结构，并暗示其内容。所以标题应该是描述性的。好的标题是清楚的、有内容的。一个检测标题优劣的办法是阅读目录，看看你通过浏览标题可以预测出多少关于研究的信息。用艾维克（Avic）的话说，“优雅的”标题应该是：“仅看它们我就能知道我该有什么预期”。
 
-检查目录中的标题时号你可以问自己以下问题：
+检查目录中的标题时，你可以问自己以下问题：
 
 * 研究问题是在哪儿被提出的？你能看出研究问题来吗？
 * 研究方法是在哪儿得到描述的？你能看出研究的实际操作方法吗？
@@ -137,7 +137,7 @@
 在引言部分，你应该（a）留给读者一个良好的第一印象，并且（b）让读者了解你花数年的时间研究某个课题是有重要原因的。引言的组成部分一般包括：
 
 * 陈述研究问题；
-* 概括研究问题的逻样依据；
+* 概括研究问题的逻辑依据；
 * 解释语言和术语（如果有必要的话）；
 * 目标和目的；
 * 概述研究对相关领域的贡献，
@@ -146,7 +146,7 @@
 
 ### 最后一章（或几章）
 
-你要通过最后一章（几章）达成的目标与引言的目标相似：向读者证明你过去儿年的研究取得了成绩，并且给读者留下最后的好印象。最后一章（几章）的组成部分一般包括：
+你要通过最后一章（几章）达成的目标与引言的目标相似：向读者证明你过去几年的研究取得了成绩，并且给读者留下最后的好印象。最后一章（几章）的组成部分一般包括：
 
 * 结果总结（可以具体地对照引言中提出的研究目标来写）；
 * 讨论结果的普遍性；
@@ -178,8 +178,8 @@
 * 对某篇论文的有条理的、客观的总结；
 * 一句话陈述；
 * 直接引用；
-* 集合性陈述一—将属于同一思想体系的文献集中起来陈述；
-* 编辑性陈述.只陈述为你的论证服务的文献（也就是说，从文献如何服务于论证的角度来陈述文献，而不是描述文献本身）。
+* 集合性陈述——将属于同一思想体系的文献集中起来陈述；
+* 编辑性陈述——只陈述为你的论证服务的文献（也就是说，从文献如何服务于论证的角度来陈述文献，而不是描述文献本身）。
 
 对文献的陈述应该与对其的解释区分开来。
 
@@ -224,15 +224,15 @@
 * 编码（如果论文涉及软件编程）；
 * 术语汇编。
 
-记住；评审人是会去读附录的。仁慈的评审人读附录是为了找到让你通过的理由；不仁慈的评审人读附录是为了找到你不够格的证据。
+记住：评审人是会去读附录的。仁慈的评审人读附录是为了找到让你通过的理由；不仁慈的评审人读附录是为了找到你不够格的证据。
 
 ## 关于写作的一些观点
 
-* 写作是困难的、花费时间的。做个简单的算木：你在五分钟内能写几个有用的句子？然后再根据你的回答估算一下写一篇文章，一个章节要用的时间，这样你写论文的日程安排就会现实许多了。
-* 写作就是要把你的思想表述明白（参看我们关于在“叙述线索在”的讨论）。
+* 写作是困难的、花费时间的。做个简单的算术：你在五分钟内能写几个有用的句子？然后再根据你的回答估算一下写一篇文章，一个章节要用的时间，这样你写论文的日程安排就会现实许多了。
+* 写作就是要把你的思想表述明白（参看我们关于在“叙述线索”的讨论）。
 * 写作是有硬性要求的：内容（写的东西要有意义）；顺序（说理摆事实要有条理）；完整性（每个部分都要彼此衔接，不能留出空白）。
 * 材料不可靠（不严密的思考、不完整的理论或不可靠的结果）会使写作难以进行。
-* 在写作时遇到困难往往体现的是你的研究存在问题，而不是你的写作态度存在问题一如果你在写作过程中遇到困难，应该细致地考察你的研究目标、步骤，以及你在写作时使用的素材。
+* 在写作时遇到困难往往体现的是你的研究存在问题，而不是你的写作态度存在问题——如果你在写作过程中遇到困难，应该细致地考察你的研究目标、步骤，以及你在写作时使用的素材。
 * 在动笔前组织好你的想法、概念和素材。
 * 表达要准确。
 
@@ -262,11 +262,11 @@
 
 问：我正在成稿的过程中，却发现有人发表过和我的论文几乎一模一样的东西。我该怎么办？
 
-答：不要慌。同样的材料可以至少从两个角度去陈述，如果你保持头脑清醒的话。找你的导师谈谈这个问题。你应该可以重新组织你的文章，加人对那个人论文的讨论，并在同时体现出自己的研究与那个人的研究是有区别的。比如，他研究的社会群体可能和你研究的社会群体有所不同，如果是这样的话，你可以在论文中更加强调社会群体这个方面，而不是强调研究方法的新颖之处。事实上，通过将你的研究结果和其他人的研究结果进行比较和对比，你的论文可能会更加出色。
+答：不要慌。同样的材料可以至少从两个角度去陈述，如果你保持头脑清醒的话。找你的导师谈谈这个问题。你应该可以重新组织你的文章，加入对那个人论文的讨论，并在同时体现出自己的研究与那个人的研究是有区别的。比如，他研究的社会群体可能和你研究的社会群体有所不同，如果是这样的话，你可以在论文中更加强调社会群体这个方面，而不是强调研究方法的新颖之处。事实上，通过将你的研究结果和其他人的研究结果进行比较和对比，你的论文可能会更加出色。
 
 问：我写了一半，思路就被堵上了，我该怎么办？
 
-答：指导博士生的书籍里给出了很多解决这个问题的办法，我们这本书在讨论写作的儿章里也提到了一些办法。比如故意做一些与写论文完全无关的事；在写作时故意表达不准确，从而引起你潜意识的反抗，使你能够重新开始写出真理；给自己一些奖励；为自己制定小的、可以完成的目标；找朋友激励你。
+答：指导博士生的书籍里给出了很多解决这个问题的办法，我们这本书在讨论写作的几章里也提到了一些办法。比如故意做一些与写论文完全无关的事；在写作时故意表达不准确，从而引起你潜意识的反抗，使你能够重新开始写出真理；给自己一些奖励；为自己制定小的、可以完成的目标；找朋友激励你。
 
 问：我可以按照你们写这本书的风格来写我的论文吗？
 
