--- a/10.qmd
+++ b/10.qmd
@@ -12,7 +12,7 @@
 
 在鲨鱼聚集的水中游泳不是个好主意，尤其在水中有血的情况下。如果水中的血是你的，那就更糟了。这血会吸引鲨鱼来袭击你，同样的原则也适用于写作。具有批判性的读者在很远处就能觉察到水中的血腥味，于是会飞速游来捕获猎物。有时他们速战速决，但有时他们喜欢先和猎物挑逗一番。这可不是一件好玩的事。
 
-还有一个比喻也可以用来说明同样的问题，虽然它不及第一个比喻抢眼，但更直接贴切。那就是狼群的比喻。狼群在进攻前会先接近猎物，观察猎物是否显示出了任何弱栽。如果猎物看起来很健康、完全有能力自我防御，那么狼群就会立刻放弃捕获它的念头。如果动物看上去很虚弱，他们就会捕获它。如果你的论文（或者陈述发言）看起来质量很好、很专业，那么你就不会受到攻击或批评。如果存在着弱点，那么狼群就会快速展开围攻。试想一只肥硕的北美驯鹿在严酷的寒冬遭遇了狼群，狼群是不可能怜悯它，让它逃生的，而向你的批评者乞求怜悯和向真正的狼群乞求怜悯一样是没有用的。
+还有一个比喻也可以用来说明同样的问题，虽然它不及第一个比喻抢眼，但更直接贴切。那就是狼群的比喻。狼群在进攻前会先接近猎物，观察猎物是否显示出了任何弱点。如果猎物看起来很健康、完全有能力自我防御，那么狼群就会立刻放弃捕获它的念头。如果动物看上去很虚弱，他们就会捕获它。如果你的论文（或者陈述发言）看起来质量很好、很专业，那么你就不会受到攻击或批评。如果存在着弱点，那么狼群就会快速展开围攻。试想一只肥硕的北美驯鹿在严酷的寒冬遭遇了狼群，狼群是不可能怜悯它，让它逃生的，而向你的批评者乞求怜悯和向真正的狼群乞求怜悯一样是没有用的。
 
 那么，你该怎么办呢？
 
@@ -26,7 +26,7 @@
 
 这个例子的潜台词是：“这篇论文讨论的是概念的检验。我不需要一个很大的样本去达成我要达成的目标，我清楚地了解这一点，我知道我在做什么，所以现在，让我们进入下一部分。”
 
-样本的大小和数据的多少很重要。然而所需数据的多少取决于你论文的性质，它是数据导向的实证性论文，还是检验某个概念的论文，抑或是研究方法导向的论文？所需数据的数趾随论文性质的不同而产生极大差别。没有太多新手能意识到这一点。过于庞大的样本其实体现了你的实验设计不理想，以及对推论统计的掌握不够格，这两方面都是吸引鲨鱼的地方，然而能认识到这一点的新手就更少了。如果以上几段文章让你感到焦虑担忧，那么你就应该考虑阅读一些关于论文类型、实验设计和推论统计的书。
+样本的大小和数据的多少很重要。然而所需数据的多少取决于你论文的性质，它是数据导向的实证性论文，还是检验某个概念的论文，抑或是研究方法导向的论文？所需数据的数量随论文性质的不同而产生极大差别。没有太多新手能意识到这一点。过于庞大的样本其实体现了你的实验设计不理想，以及对推论统计的掌握不够格，这两方面都是吸引鲨鱼的地方，然而能认识到这一点的新手就更少了。如果以上几段文章让你感到焦虑担忧，那么你就应该考虑阅读一些关于论文类型、实验设计和推论统计的书。
 
 ### 第二步：准备好了以后就要传达正确的信息
 
@@ -43,9 +43,9 @@
     遵守学科惯例就相当于告诉读者，你知道什么是重要的，也就是说“你是内行”。
 
 体现出你有重要的东西要说
-:   要客气地、不带挑衅地传达这个信息。不能与你的读者产生对抗，但是应该让你的读者感觉到，你是一个专业人士，你不会给他们看二流的东西，浪费他们的时间。一个有用的诀窍是要换个角度考虑问题呵不要让读者感觉到你是在说：“看若我”，而是要让读者感觉到你是在说：“看这个”。如果你在一篇论文的开头提出了一个有趣的问题，并暗示了一个可能解决问题的有趣的办法，而不是告诉读者是你想到了一个有趣的问题，又是你看到了解决问题的可能性，那么你就上了轨道了（这种写作思路的一个好处是，如果你提出的解决方法没有奏效，它也并不能反映你本人的判断力值得怀疑）。
+:   要客气地、不带挑衅地传达这个信息。不能与你的读者产生对抗，但是应该让你的读者感觉到，你是一个专业人士，你不会给他们看二流的东西，浪费他们的时间。一个有用的诀窍是要换个角度考虑问题，不要让读者感觉到你是在说：“看着我”，而是要让读者感觉到你是在说：“看这个”。如果你在一篇论文的开头提出了一个有趣的问题，并暗示了一个可能解决问题的有趣的办法，而不是告诉读者是你想到了一个有趣的问题，又是你看到了解决问题的可能性，那么你就上了轨道了（这种写作思路的一个好处是，如果你提出的解决方法没有奏效，它也并不能反映你本人的判断力值得怀疑）。
 
-    从别的学科领域引入可能解决问题的方法往往是一种有效策略。这个别的领域必须具有足够的可靠性以至于可以被应用到你本人研究的课题上－这往往意味着，你所要引入的这个领域必须比你研究课题涉及的领域更加正式，具有更加完善的研究方法体系。你应该充分掌握你所要引入的领域，否则你提出的解决办法就不会具有可信度，那个领域的行家会把你看做是一个典型的新手，没读多少文献就开始自作主张，犯了新手常犯的错误，只是你的错误还涉及别的领域而已。一点肤浅的对某个其他领域的了解可能会使你在会议上蒙混过关，因为会议的听众席上可能没有来自那个领域的专家来揭露你。但如果是寄给期刊的稿件，那么你蒙混过关的可能性就为零了，因为期刊编辑一定会确保你的论文由相关领域的专家来鉴定。专家学者对很多生僻知识的了解程度是惊人的。
+    从别的学科领域引入可能解决问题的方法往往是一种有效策略。这个别的领域必须具有足够的可靠性以至于可以被应用到你本人研究的课题上——这往往意味着，你所要引入的这个领域必须比你研究课题涉及的领域更加正式，具有更加完善的研究方法体系。你应该充分掌握你所要引入的领域，否则你提出的解决办法就不会具有可信度，那个领域的行家会把你看做是一个典型的新手，没读多少文献就开始自作主张，犯了新手常犯的错误，只是你的错误还涉及别的领域而已。一点肤浅的对某个其他领域的了解可能会使你在会议上蒙混过关，因为会议的听众席上可能没有来自那个领域的专家来揭露你。但如果是寄给期刊的稿件，那么你蒙混过关的可能性就为零了，因为期刊编辑一定会确保你的论文由相关领域的专家来鉴定。专家学者对很多生僻知识的了解程度是惊人的。
 
 ## 了解你的敌人
 
@@ -78,15 +78,15 @@
 
 如果你对某个问题不了解，那就花时间和精力去学习，直到你理解为止。如果你使用了一个自己都不知道是什么意思的技术术语，具有批判性的读者一眼就看得出来。
 
-有一个例外，那就是当你就专业性的检验（specialist tests）听取专家意见的情况。在这种情况下，很多学科的惯例是原谅研究者不具有他本人领域之外的专业知识，并允许他从一到两个独立的、相关领域的权威那里听取建议。如果建议不对，那也不是研究者的问题，因为他已经采取不r他应该采取的行动。但研究者仍需要了解统计检验结果的含义。
+有一个例外，那就是当你就专业性的检验（specialist tests）听取专家意见的情况。在这种情况下，很多学科的惯例是原谅研究者不具有他本人领域之外的专业知识，并允许他从一到两个独立的、相关领域的权威那里听取建议。如果建议不对，那也不是研究者的问题，因为他已经采取了他应该采取的行动。但研究者仍需要了解统计检验结果的含义。
 
 ## 将写作当成一种表现性行为
 
-写作风格和语言还包括内容的选择，对于你的核心论证都很重要然而它们更大的作用却显示在它们可以准确地传达关于作者本人的信息。
+写作风格和语言还包括内容的选择，对于你的核心论证都很重要，然而它们更大的作用却显示在它们可以准确地传达关于作者本人的信息。
 
 传达的负面信息有：
 
-* 我元知、不了解情况、我很绝望；
+* 我无知、不了解情况、我很绝望；
 * 我懒惰、不诚实、没礼貌、我该受到谴责。
 
 传达的正面信息有：
@@ -112,7 +112,7 @@
 ### 我无知，不了解情况，我很绝望（在不小心就会传达出这样的信息，尤其是对二年级的博士生而言）
 
 * 我没有读过关键文献；
-* 我犯了我这个阶段的一些典型错误,却连自己都没有意识到；我没有想到应该把稿子交给某位能给我指出错误的前辈过目；
+* 我犯了我这个阶段的一些典型错误，却连自己都没有意识到；我没有想到应该把稿子交给某位能给我指出错误的前辈过目；
 * 我在论文里向读者道歉，请求他们的谅解。
 
 ### 我懒惰，不诚实，没礼貌，我该受谴责
@@ -138,13 +138,13 @@
 * 对你所在学科的尊重；
 * 可发表性。
 
-让论文的形式和语言正确与让论文的内容正确一样重要——事实上，它们对内容的表达起到关键作用。如果你对此心存怀疑，牢记这条基本原则：论文应该能脱离作者独立表意如果评审人误解了其中的内容，责任在于作者，而非评审人。
+让论文的形式和语言正确与让论文的内容正确一样重要——事实上，它们对内容的表达起到关键作用。如果你对此心存怀疑，牢记这条基本原则：论文应该能脱离作者独立表意——如果评审人误解了其中的内容，责任在于作者，而非评审人。
 
 博士论文被广泛认为是最高形式的学术写作，它对内容、准确性、论证以及对全文的统筹规划方面的要求都要高于对单独发表的学术文章的要求。它是一部“杰作”，这并不代表它是“完美作品”，而是意味着它包含的写作技巧、技能、形式和功能可以展示出一个学生的全部才华。
 
 ### 论文“红线”
 
-好的表达的核心是要有一个好的不“情节”——不是小说的情节，而是一个将各个元素联系起来，使前后元素间自然过渡的顺序安排。博士论文必须有一条清晰的“叙述线索”。瑞典的学者们将它比喻成一条“红线”，贯穿全文（就像绣在平纹细布上的红线）。这条红线（有清晰论证过程的合适结构）是成功的必备要素。虽然红线与写作结构紧密相关，我们在这一章关于写作风格的讨论中也提到它，是因为风格也包括清晰，包括证明你知道什么重要什么不重要。
+好的表达的核心是要有一个好的“情节”——不是小说的情节，而是一个将各个元素联系起来，使前后元素间自然过渡的顺序安排。博士论文必须有一条清晰的“叙述线索”。瑞典的学者们将它比喻成一条“红线”，贯穿全文（就像绣在平纹细布上的红线）。这条红线（有清晰论证过程的合适结构）是成功的必备要素。虽然红线与写作结构紧密相关，我们在这一章关于写作风格的讨论中也提到它，是因为风格也包括清晰，包括证明你知道什么重要什么不重要。
 
 一位智者托马斯·格林（Thomas Green）曾经将红线表述成是“事情的伟大全局”，简写为GOST（Great Overall Scheme of Things）。你论文的所有元素必须要受GOST的支配，不符合GOST的内容要删除。托马斯的建议是要“和你的GOST交朋友”。如果你始终不断地重新评估你的GOST，你就能够写出一篇前后连贯、结构完整的论文。
 
@@ -156,13 +156,13 @@
 
 ### 语言
 
-“语言”指的是你写作的特性，它能体现出你是一个什么样的人，你写作的态度如何，你心目中的读者群是哪一类型的。有的文章读起来是辩论性的（作者在与谁辩论呢？）、宗教性的（作者试图向谁传道呢？）、道歉性的（作者试图要取悦谁呢？）、屈尊的（作者低估了谁呢？）、自以为是的（作者小看了谁呢？）等等－这些作者的语言体现出了作者心目中的读者群。
+“语言”指的是你写作的特性，它能体现出你是一个什么样的人，你写作的态度如何，你心目中的读者群是哪一类型的。有的文章读起来是辩论性的（作者在与谁辩论呢？）、宗教性的（作者试图向谁传道呢？）、道歉性的（作者试图要取悦谁呢？）、屈尊的（作者低估了谁呢？）、自以为是的（作者小看了谁呢？）等等——这些作者的语言体现出了作者心目中的读者群。
 
-清晰、简单、权威、诚实，这几点是作者语言的正面特性。不准确、宗教性、自卫性、自以为是，这儿点是应该避免的负面特性。你可以找出一篇范文，分析它的优点何在。看看你是否能够总结出作者语言的特性，并从中发现作者的独特之处。
+清晰、简单、权威、诚实，这几点是作者语言的正面特性。不准确、宗教性、自卫性、自以为是，这几点是应该避免的负面特性。你可以找出一篇范文，分析它的优点何在。看看你是否能够总结出作者语言的特性，并从中发现作者的独特之处。
 
 你的读者是谁？你所在学科领域的惯例是怎样的？研究汇报的标准是怎样的？一个诀窍是找到一个聪明的、读过很多书的、非专业的读者，把他当做你心目中读者的代表。如果你假设你的读者是个聪明能干、眼界开阔又对你的研究感兴趣的人，那么你就能避免在论文中使用不适宜的语言。
 
-清晰对于论文来说是至关重要的。你应该在论文中展示自己对所选领域有详细的了解。这并不等于简化内容，或使用“大词”。一篇好的论文会恰当地使用技术术语，如果它是写给专业研究人员看的，普通读者可能会因此看不懂，然而这并不妨碍专业读者读懂文章。使用专业术语对于目标读者群并不构成阅读障碍，表达不清晰才会。如果你自己都不知道想说什么，你就应该先想清楚，这样表达起来就会清晰很多。普通技术术语是可以通过对其明确定义和解释被人了解的－这是术语的特性。所以大呈使用普通英语术语是可以的。
+清晰对于论文来说是至关重要的。你应该在论文中展示自己对所选领域有详细的了解。这并不等于简化内容，或使用“大词”。一篇好的论文会恰当地使用技术术语，如果它是写给专业研究人员看的，普通读者可能会因此看不懂，然而这并不妨碍专业读者读懂文章。使用专业术语对于目标读者群并不构成阅读障碍，表达不清晰才会。如果你自己都不知道想说什么，你就应该先想清楚，这样表达起来就会清晰很多。普通技术术语是可以通过对其明确定义和解释被人了解的——这是术语的特性。所以大量使用普通英语术语是可以的。
 
 要谨慎使用类属词典里的词。如果你在类属词典里发现了一个词不确定它的意思就用到论文里去了，你很有可能会用错这个词而使自己看起来像个傻瓜。
 
@@ -191,7 +191,7 @@
 权威的
 :   * 熟练使用文献；
     * 没有含糊不清的语句；
-    * 优先荻得可靠性；
+    * 优先获得可靠性；
     * 内容涵盖的范围合理；
     * 准确恰当地使用术语。
 
