--- a/03.qmd
+++ b/03.qmd
@@ -8,7 +8,7 @@
 
 ### 研究助理 （Research assistant）
 
-研究助理是被聘请来协助学术研究人员开展研究工作的人员。这个研究工作通常是为了某个研究课题而开展的，而这个研究课题之所以能够进行，是因为之前这个研究人员争取到该课题的科研经费。这意味着该研究课题有可能是提前就计划好了的，而且很可能是相当详细的计划。拿到研究经费的人很可能持有这样的观点：这项工程带来的任何荣耀（包括论文的最初原创作者）都应该归功于那个计划好这个项目并争取到研究经费，从而让这个项目得以实施的人（也就是他们自己八而研究助理则可能持不同的观点，争取研究经费的项目申请书中包含着大量似是而非的主张，这些东西如果没有进一步细节的工作，是无法转化为有意义的研究的。这些细节的工作都是由研究助理来完成的。因此在这项工程带来的任何荣耀（包括论文的最初原创作者）中都该有他们应得的一份。在这样的情况中，如果是刚刚修完一个学位的研究助理，在这场争辩中是不可能有发言资格的。博士后研究助理的情况可能会有些不同，但通常也不是完全不同的。
+研究助理是被聘请来协助学术研究人员开展研究工作的人员。这个研究工作通常是为了某个研究课题而开展的，而这个研究课题之所以能够进行，是因为之前这个研究人员争取到该课题的科研经费。这意味着该研究课题有可能是提前就计划好了的，而且很可能是相当详细的计划。拿到研究经费的人很可能持有这样的观点：这项工程带来的任何荣耀（包括论文的最初原创作者）都应该归功于那个计划好这个项目并争取到研究经费，从而让这个项目得以实施的人（也就是他们自己）。而研究助理则可能持不同的观点，争取研究经费的项目申请书中包含着大量似是而非的主张，这些东西如果没有进一步细节的工作，是无法转化为有意义的研究的。这些细节的工作都是由研究助理来完成的。因此在这项工程带来的任何荣耀（包括论文的最初原创作者）中都该有他们应得的一份。在这样的情况中，如果是刚刚修完一个学位的研究助理，在这场争辩中是不可能有发言资格的。博士后研究助理的情况可能会有些不同，但通常也不是完全不同的。
 
 ### 博士后研究助理（Postdoctoral research assistant）
 
