--- a/03.qmd
+++ b/03.qmd
@@ -16,7 +16,7 @@
 
 ### 讲师（Lecturer）
 
-取得讲师职位通常是职业生涯中坚实的第一步。研究助理的生活常常是从一个短期合同到另一个短期合同。而讲师职位的聘任时间相对较长，而且通常有一定的稳定性允许你完成一些事情。当然。在成为正式的职员前还有许多重要的事情是你不能做的，比如向提供研究经费的机构申请课题的科研基金。因此成为讲师是职业生涯中一个重大的转变，这表明你可以作为正式职员申请科研基金了。
+取得讲师职位通常是职业生涯中坚实的第一步。研究助理的生活常常是从一个短期合同到另一个短期合同。而讲师职位的聘任时间相对较长，而且通常有一定的稳定性允许你完成一些事情。当然，在成为正式的职员前还有许多重要的事情是你不能做的，比如向提供研究经费的机构申请课题的科研基金。因此成为讲师是职业生涯中一个重大的转变，这表明你可以作为正式职员申请科研基金了。
 
 ### 高级讲师（Senior lecturer）
 
