Correct some incorrect words

--- a/03.qmd
+++ b/03.qmd
@@ -44,7 +44,7 @@
 
 如何成为一个资深教授，这是个复杂的问题。到我们的大部分读者真正达到这个崇高的职位的时候，那些基本程序肯定已经发生了巨大的变化。但这仍然是一个非常有趣而不容忽略的话题。从形式上来说，如今想要成为资深教授的人通常必须向一个评判小组提交申请表，还要遵循若干规章制度，包括应该提出一些证据来证明。哪些人可以出现在评判小组中，哪些不可以等等。最核心的问题是这个申请者应该有一系列完整连贯的著作，而且至少在全国范围内享有一定的重要影响力。此外诸如发表文章的频率、收入水平、指导的博士生完成学位的情况、学术角色等等一系列问题都是评判标准。在这个过程中，形式上的学术资格证明是没有人会去注意的。事实上，一些年长的教授根本就没有博士学位。
 
-但是，事情远远没有上述的这么简单。如果有人想要以投机圆滑的手段爬到这个高度，他必须相当擅长权力政治，或者有大笔可供投人的资产，或者二者兼具。一个有手段的申请者通常会明确地表示出他们对于这个大学来说是一笔相当数橇的资产。没有哪个大学愿意冒风险拒绝一个意味着大笔资产的人，或者随之而来的潜在的风险万一这个人在被拒绝后。一怒之下改去了其他地方却在其他地方得到了重视。在这个阶段，不少谨慎明智的决定很有可能是在双方当事人协商下作出的。
+但是，事情远远没有上述的这么简单。如果有人想要以投机圆滑的手段爬到这个高度，他必须相当擅长权力政治，或者有大笔可供投入的资产，或者二者兼具。一个有手段的申请者通常会明确地表示出他们对于这个大学来说是一笔相当数量的资产。没有哪个大学愿意冒风险拒绝一个意味着大笔资产的人，或者随之而来的潜在的风险————万一这个人在被拒绝后，一怒之下改去了其他地方却在其他地方得到了重视。在这个阶段，不少谨慎明智的决定很有可能是在双方当事人协商下作出的。
 
 ## 了解你的“敌人”
 
