Correct some character errors

--- a/04.qmd
+++ b/04.qmd
@@ -4,7 +4,7 @@
 
 与此同理，你的导师对你非常重要。与你本科时期的论文写作指导老师不同，他不再是你的众多导师中的一员，而是你唯一的指导教师。
 
-良好的师生关系需要双方共同的努力。你的导师没有义务把所有事情都做得完美无缺；论文的成功与否取决于你们共同的付出与合作。很多博士生遇到一些不必要的麻烦，因为他们在处理与导师的关系时，犯了某些很常见的错误。很不幸的是，我们的经历告诉我们很多学生没有深人思考这种关系，而且大部分问题都是可以预料的，也是可以避免的。如果你已经透彻地思考了这些问题，那么你很有可能会被看做导师和学院的一笔宝贵的财富，最后则是欢喜大结局。
+良好的师生关系需要双方共同的努力。你的导师没有义务把所有事情都做得完美无缺；论文的成功与否取决于你们共同的付出与合作。很多博士生遇到一些不必要的麻烦，因为他们在处理与导师的关系时，犯了某些很常见的错误。很不幸的是，我们的经历告诉我们很多学生没有深入思考这种关系，而且大部分问题都是可以预料的，也是可以避免的。如果你已经透彻地思考了这些问题，那么你很有可能会被看做导师和学院的一笔宝贵的财富，最后则是欢喜大结局。
 
 大多数关于攻读博士学位的“恐怖”传说都源自学生与导师的关系难以处理的问题，而不是研究课题很难或校外评审人很苛刻等问题。最常见的原因莫过于学生不听取导师意见。稍不常见或不为人知的则是因为指导教师很无能而造成的“恐怖”。现在流行的趋势是每个博士生有一位以上的指导老师，这样做就减少了你遇到一个无赖或者无能之辈的风险。此外，学院一般都会严密注视学生每个阶段的表现，比如说在升级研讨会上，无能的导师的表现就会暴露于众，学院也会就其能力进行调查。
 
@@ -18,7 +18,7 @@
 
 导师应该提供哪些方面的指导和帮助呢？学生们很少思考这个问题也对此存在较多的误解。
 
-一种误解就是认为导师是单纯意义上的技术资源，提供专业知识，解答你所研究的领域的晦涩难题。比如你以`UNIX`操作系统作为你的博士学位研究课题，期望导师能够解答你遇到的技术难题。持有此看法的学生，一旦发现导师不能解答某个难懂的专业问题，就会感到不解，这些学生就会抱怨导师没有能力，而后也弄不明白学院里为什么不会因此同情自己。设置博士学位的目的在于展示你作为一个独立的研究者能够自己发现新的知识的能力，如果你期待你的导师熟知你研究课题的所有方面，那么你就没有理解博士学位的意义所在。
+一种误解就是认为导师是单纯意义上的技术资源，提供专业知识，解答你所研究的领域的晦涩难题。比如你以UNIX操作系统作为你的博士学位研究课题，期望导师能够解答你遇到的技术难题。持有此看法的学生，一旦发现导师不能解答某个难懂的专业问题，就会感到不解，这些学生就会抱怨导师没有能力，而后也弄不明白学院里为什么不会因此同情自己。设置博士学位的目的在于展示你作为一个独立的研究者能够自己发现新的知识的能力，如果你期待你的导师熟知你研究课题的所有方面，那么你就没有理解博士学位的意义所在。
 
 指导博士论文有很多方法，导师可以扮演很多不同的角色；每个学生都与众不同，也就需要不同的支持和帮助。其中一种类型的学生很大程度上可以独立完成大部分工作，指导见面会就成为师生双方都很享受的时刻，因为彼此能够相互学习。这种情况虽然很少，但是确实存在。这类学生一般入学成绩分数都不是很高，成绩不是最优秀的，但是他们有一个共同点，即他们擅长自学，能够适时判断什么时候应该停下来接受反馈。另外一种类型的学生从来不主动去学习什么知识，他们需要不间断的反馈、积极的鼓励，看起来总是期待有人一勺一勺的来喂他们，甚至到了一种令人担忧的程度。对于属于第一种类型的学生而言，导师们经常会忙于幕后工作，想方设法帮他们寻找毕业后需要的资助；对于另一种类型的学生而言，导师们则有不同于资助的事情需要优先考虑。
 
@@ -26,7 +26,7 @@
 
 其他角色包括：
 
-* 专业技术支持：例如一些技术技巧培训，如何应用图书馆或专业软件以及相关文献；提供与其他研究者的联系机会和方式；指导纥构论文主题；培养批判性阅读技巧。
+* 专业技术支持：例如一些技术技巧培训，如何应用图书馆或专业软件以及相关文献；提供与其他研究者的联系机会和方式；指导建构论文主题；培养批判性阅读技巧。
 * 拓展型智力支持：例如帮助学生培养讨论技巧和批判性思维能力；提供本领域内的高级知识与研究论题；提供专家意见与建议，指导学生学会在此领域内做研究工作。
 * 行政管理支持：例如帮助寻找资金，寻找其他的资源；保护学生不受学校中政治或行政的麻烦的伤害；帮助学生发表论文或著作。
 * 管理：例如提供一整套制度（会议、最后期限、目标等），规定最终期限和实施方案。
@@ -79,7 +79,7 @@
 * 没有尊重导师的时间，导师时间紧迫，事情繁多（你只是众多的事情中的一件）；
 * 在最后一分钟提出很多要求，而不给导师时间去阅读、思考和提问等；
 * 通常情况下，期待导师第二天就阅读你的每一稿；
-* 期持由导师来安排一切事情；
+* 期待由导师来安排一切事情；
 * 不听取导师的意见就擅自组织一些事情（从某种程度上讲，独立精神固然重要，但是你要保证自己的独立精神是恰到好处才可以）。
 
 ### 如何与导师相处
