Review content errors
Signed-off-by: Liang Zhang <psychelzh@outlook.com>

--- a/07.qmd
+++ b/07.qmd
@@ -6,7 +6,7 @@
 
 这是大多数人最容易想到的一种论文类型。数据导向型论文集中描述和讨论数据（而不是描述和讨论收集数据所用的方法）。这类论文的代表包括报告调查结果的论文和报告正式试验的论文。
 
-数据导向型论文因为儿个原因很重要，并且使用“学徒”研究模式的研究者将在他们的研究中至少安排一项数据导向的研究，以证明他们知道如何做这些工作。
+数据导向型论文因为几个原因很重要，并且使用“学徒”研究模式的研究者将在他们的研究中至少安排一项数据导向的研究，以证明他们知道如何做这些工作。
 
 如果你的论文的中心是数据，那么你需要好的数据。这意味着数据可靠并且有趣。“可靠”的意思是：样本的大小、质量和代表性等应该达到一个毋庸置疑的标准。研究人员中的新手（有时候不仅仅是新手）常常会担心样本的大小是否达标，被调查对象是否足够多。他们担心的另一个问题就是样本的代表性问题。代表性是他们喜欢考虑的问题，因为任何人，只要有一把舒适的坐椅和一点常识，都能够不费劲地想出各种理由来质疑样本是否具有足够的代表性。然而一旦问卷寄出（问卷是搜集数目庞大、可信度值得怀疑的数据的惯用方法），这种种担忧都会让位给怎么方便怎么来的原则。所以如果你正在进行这方面的工作，你有必要了解统计学的知识。
 
