--- a/11.qmd
+++ b/11.qmd
@@ -148,7 +148,7 @@
 * 把想法写在检索卡片上（一张一个想法），然后把它们分组或按某种结构摆放。用不同的方式来分类和摆放卡片可以帮助你发现，哪些想法是不符合整体框架的，哪些想法是需要着重强调的。
 * 写作纲要：有经验的写作者往往会建议，列出一个具体的写作纲要应该是第一件必须做的事。列出不同种类的纲要会对你有帮助，这些纲要包括：内容大纲、标题加上相应部分的概要（以体现出论文的是“故事情节”）、标题加上对相应部分“角色”的描述（这部分是什么，它有什么作用，它如何为整个论证服务）等。
 
-问题：为什么我用了很多笔墨去说明的问题我的导师只要简单儿句话就说清楚了？
+问题：为什么我用了很多笔墨去说明的问题我的导师只要简单几句话就说清楚了？
 
 解决这个问题就必须练习，练习写作和修改。记住简单原则。但也要认识到，简单并不是单纯的字数少一有时候多加几个词反而会使文章更加简单易懂。应该从论证结构上找问题的根源，并将结构作为你修改的重中之重。文章的混乱与不和谐往往是由于你不知道该保留哪些合适的东西，删除哪些不合适的东西，结果就是所有该使用的内容和不该使用的内容都被堆到了一起。
 
