--- a/12.qmd
+++ b/12.qmd
@@ -20,7 +20,7 @@
 
 在内容方面容易犯的经典错误很多。其中之一就是错误判断你在规定时间内能够讲的内容。避免这个问题最好的办法就是事先演练讲话并给自己计时，然后根据情况添加或删除内容，再次演练，直到时间恰好为止。这种方法对于较短的陈述报告非常有效。如果发言时间较长，比如要一小时，那么反复演练会很累人，这种情况下更好的办法是在演练一遍之后根据需要调整材料的数量，并事先拟定一个计划：如果到时候时间不够，将略去哪些内容；时间有余，将添加哪些内容。
 
-要控制好时间有一个小诀窍，你可以事先计划好在什么时候应该讲到哪个内容，并把计划好的讲话进度写在纸上（比如，“10:15，展示关于软件失败率的幻灯片”），做陈述报告时你就可以参考这页纸，以确认自己是否跟上了进度。对于较短的陈述报告，认真地进行演练可以有效地控制好时间。我们中有人曾在应聘时被要求做八分钟的陈述报告，能否掌握好时间也是考察的能力之一。我们的策略是在事先进行若干遍演练，调整材料，直到将陈述报告时间控制在七到九分钟之间。当真正的陈述报告到来时，我们故意不看表，而是通过观察听众的面部表情来估计还剩多少时间，结果我们在离规定结束时间还有儿秒钟的时候完成了我们的陈述报告，并使听众感觉我们根本不需要看表就能掌握好时间，故意卖弄？是的。但这却给听众留下了好印象——大多数发言人在八分钟的时间段里就算看表也难以把握好时间，不看表就能控制好时间体现了我们具有专业级的技能。
+要控制好时间有一个小诀窍，你可以事先计划好在什么时候应该讲到哪个内容，并把计划好的讲话进度写在纸上（比如，“10:15，展示关于软件失败率的幻灯片”），做陈述报告时你就可以参考这页纸，以确认自己是否跟上了进度。对于较短的陈述报告，认真地进行演练可以有效地控制好时间。我们中有人曾在应聘时被要求做八分钟的陈述报告，能否掌握好时间也是考察的能力之一。我们的策略是在事先进行若干遍演练，调整材料，直到将陈述报告时间控制在七到九分钟之间。当真正的陈述报告到来时，我们故意不看表，而是通过观察听众的面部表情来估计还剩多少时间，结果我们在离规定结束时间还有几秒钟的时候完成了我们的陈述报告，并使听众感觉我们根本不需要看表就能掌握好时间，故意卖弄？是的。但这却给听众留下了好印象——大多数发言人在八分钟的时间段里就算看表也难以把握好时间，不看表就能控制好时间体现了我们具有专业级的技能。
 
 涉及内容的经典问题还有很多。最常见的一个问题是如何选择难度适宜的材料来陈述报告。如果你的发言技术含量很高，而你的听众对你讲的领域却只有一点肤浅的了解，那么你的发言很可能会让他们感到百无聊赖。相反，如果你对一群内行讲很基本的东西，这将使听众和你自己都显得尴尬。最好的策略是与活动主办方联系，事先了解听众的程度。大多数的主办方都会很乐意帮助你，他们会认为你在事先询问体现了你具有高度的专业精神。
 
@@ -38,7 +38,7 @@
 
 这部分讨论你谈话内容的陈述报告方式。形式与内容在某些方面有重叠，但通常两者的区别是很明显的，也是很有用的。
 
-听众在见到你之前事实上已经对你形成了一个印象。他们对你的印象有很多来源。比如在应聘面试前，他们一定巳经读了你的简历。你的简历里是否有值得一提的成就，附信是否给人留下了好印象？在学术场合，听众们在你发言前至少已经知道了讲话题目，或许还读了一段发言稿摘要。你讲话的题目和摘要吸引人吗？它们是否恰当地代表了你和你的研究工作？事先做点功课会对你很有帮助。
+听众在见到你之前事实上已经对你形成了一个印象。他们对你的印象有很多来源。比如在应聘面试前，他们一定已经读了你的简历。你的简历里是否有值得一提的成就，附信是否给人留下了好印象？在学术场合，听众们在你发言前至少已经知道了讲话题目，或许还读了一段发言稿摘要。你讲话的题目和摘要吸引人吗？它们是否恰当地代表了你和你的研究工作？事先做点功课会对你很有帮助。
 
 听众们了解你的第二个途径就是听主持人的介绍。理想的介绍应该是这样子的，比如，“我们很高兴能请到琳达（Linda），相信在座的诸位已经通过她与克里斯（Chris）的合作对她的研究非常熟悉了。”较为不理想的情况是，负责把你介绍给听众的人不断地看提示卡片还把你的名字读错了。如果你的学术事业蒸蒸日上，那么你受到第一种介绍的可能性就会大大提高。
 
@@ -132,7 +132,7 @@
 ### 预防紧张情绪
 
 * 做足准备：做好准备工作并不会使你不紧张，但它能帮助你克服紧张情绪。如果你事先进行了演练，获得了不错的反响，并通过演练改进了可能出现问题的环节，那么你在实际做陈述报告时就会自信很多。
-* 提示卡片：如果你必须记住某些关键信息（比如重要文献及其作者的名字儿那么你可以把它们写在一张提示卡片上（也就是关键事实和论点的清单），这样你陈述报告时如果需要就可以参考卡片上的信息。
+* 提示卡片：如果你必须记住某些关键信息（比如重要文献及其作者的名字），那么你可以把它们写在一张提示卡片上（也就是关键事实和论点的清单），这样你陈述报告时如果需要就可以参考卡片上的信息。
 * 预料到你的恐惧：把自己最担心的事都想一遍。可能会发生的最糟糕的情况是什么？你将怎样去面对这种情况？问问别人是怎样处理它们的。
 * 找到一张友好的脸：如果你把陈述报告看做是与某个人一尤其是对你所说的感兴趣的人的一次谈话，那么你的陈述报告就比较有可能显得温暖亲切，类似于谈话。
 * 停下来呼吸：在陈述报告过程中做短暂的停顿用来呼吸，你会感觉停顿时间很长，但观众却根本觉察不到。让自己停下来片刻是有必要的，它使你能镇定下来，组织思路，均匀呼吸。你的陈述报告会因此而更加出色。
