--- a/14.qmd
+++ b/14.qmd
@@ -40,7 +40,7 @@
 
 ## 开放的舞台
 
-通常，在答辩之前，考官们会在系里聚一次，开一个答辩前会议，确定他们的行动计划。在这种场合下，他们通常不会对见你有多大兴趣。这和私人感情无关：他们有工作要做，必须集中精力在工作上。诸多答辩都在下午举行，给考官们留足时间到达答辩地点，在这些案例中，正常情况下，答辩之前，你的导师会请老师们共进午餐。他们或许不会邀请你：这是礼节，并不是怠慢你。（如果你在上午面对他们进行了成功的答辩，你或许会被邀请参加午宴，但那是完全不同的）。经常会有一些有关人际关系的谣传，导师会在午宴时给校外评审人多劝儿杯酒，保证他们有一个好心情，如果真有这么回事，那就是例外。当他们准备好时，你就会被召唤进入房间内，如果你有什么地方和大多数准博士相似的地方，就是看起来真的很紧张。
+通常，在答辩之前，考官们会在系里聚一次，开一个答辩前会议，确定他们的行动计划。在这种场合下，他们通常不会对见你有多大兴趣。这和私人感情无关：他们有工作要做，必须集中精力在工作上。诸多答辩都在下午举行，给考官们留足时间到达答辩地点，在这些案例中，正常情况下，答辩之前，你的导师会请老师们共进午餐。他们或许不会邀请你：这是礼节，并不是怠慢你。（如果你在上午面对他们进行了成功的答辩，你或许会被邀请参加午宴，但那是完全不同的）。经常会有一些有关人际关系的谣传，导师会在午宴时给校外评审人多劝几杯酒，保证他们有一个好心情，如果真有这么回事，那就是例外。当他们准备好时，你就会被召唤进入房间内，如果你有什么地方和大多数准博士相似的地方，就是看起来真的很紧张。
 
 ### 开放的开场白
 
