--- a/16.qmd
+++ b/16.qmd
@@ -30,7 +30,7 @@
 
 权力来自于何处？在研究者本身所在机构中，权力不是来自于研究团体中的地位：权力来自于影响主办机构决定事务的能力。这或许会来自于官方角色——例如，如果你是一个大型基金会的评审小组成员，那么你所在机构的一部分人就不可能会想和你进行太多的对抗。然而，你的机构中还有其他人，例如，仅仅和教学相关的一部分人，以及那些对研究赞助基金根本没有兴趣的一部分人。因此，出于这样和那样的原因，更强有力的权力资源就是金钱。如果你给自己的研究机构带回大量的金钱，那么你就会被看做是有价值的资产。你带回的钱越多，你就会越有价值，就有更多的机会得到更好的对待。
 
-迄今为止，切都运转良好。尽管如此，你带来大量的钱，但是和机构中带来更多的钱的人起了冲突，你被冲突困住了，如何解决呢？在一个更高的等级层面上，如果你认识到你的工作能够让这个世界变成更好的地方，但是在一天之内没有足够的时间做完所有你需要做的事情，这又该怎么办呢？对这两者的答案就是拥有“更大的权力”。你有儿个研究助理，也许有一个小的研究中心，或者只有一两个同事，你就会开始考虑，拥有一个帝国应该不是一件坏事情。你开始意识到有一个气派的头衔、大的办公室、大量的下属让你在机构内更有效地对付琐碎的官僚事务，有时间从事生活中更重要的事情如研究工作。你开始明白你已经达到了你的生涯的新阶段，为此，你需要更新技术和价值观。
+迄今为止，一切都运转良好。尽管如此，你带来大量的钱，但是和机构中带来更多的钱的人起了冲突，你被冲突困住了，如何解决呢？在一个更高的等级层面上，如果你认识到你的工作能够让这个世界变成更好的地方，但是在一天之内没有足够的时间做完所有你需要做的事情，这又该怎么办呢？对这两者的答案就是拥有“更大的权力”。你有几个研究助理，也许有一个小的研究中心，或者只有一两个同事，你就会开始考虑，拥有一个帝国应该不是一件坏事情。你开始意识到有一个气派的头衔、大的办公室、大量的下属让你在机构内更有效地对付琐碎的官僚事务，有时间从事生活中更重要的事情如研究工作。你开始明白你已经达到了你的生涯的新阶段，为此，你需要更新技术和价值观。
 
 ## 职业生涯类型
 
@@ -44,7 +44,7 @@
 
 ### 巡游学者
 
-巡游学者可以按照地理或者学术学科游学，或者地理和学科两者结合游学。这一做法有很长的历史。在中世纪，学者们在欧洲从一个大学巡游到另一个大学（有拉丁语做通用语言让这一切相对容易）。在拿破仑战争时期，甚至在英法激战的时期，杰出的英国科学家到法国做演讲也没什么大不了的。这个传统现在依然存在，好的研究小组经常聚集了来自全世界的聪明研究者。基于现实的原因，走这条路线的人尽管会建立起令人钦佩的声望，但是通常不会建立物质形式的帝国。如一句警句的说法：如果你按照地理游学，建立令人钦佩的声望是很容易的，只要你在领域内受人尊敬的地方每个人都阅读的期刊以及每个人都参加的学术会议一一发表了研究工作。如果你在不同的研究领域之间游学，建立令人钦佩的声望是十分困难的。建立声望要花很长时间（从开始写一篇文章到看若它印在理想的期刊上需要三年的时间，而发表在一个高等级的期刊则需要更长的时间）。如果你经常转移领域，那么你就不会花大量时间来写作和发表文章。对这种一般性的一个明显例外就是如果你游学在两个你都具有坚实基础的学科之间，立足于一个专业并应用另一个专业的概念，那就可能非常有成效。
+巡游学者可以按照地理或者学术学科游学，或者地理和学科两者结合游学。这一做法有很长的历史。在中世纪，学者们在欧洲从一个大学巡游到另一个大学（有拉丁语做通用语言让这一切相对容易）。在拿破仑战争时期，甚至在英法激战的时期，杰出的英国科学家到法国做演讲也没什么大不了的。这个传统现在依然存在，好的研究小组经常聚集了来自全世界的聪明研究者。基于现实的原因，走这条路线的人尽管会建立起令人钦佩的声望，但是通常不会建立物质形式的帝国。如一句警句的说法：如果你按照地理游学，建立令人钦佩的声望是很容易的，只要你在领域内受人尊敬的地方每个人都阅读的期刊以及每个人都参加的学术会议一一发表了研究工作。如果你在不同的研究领域之间游学，建立令人钦佩的声望是十分困难的。建立声望要花很长时间（从开始写一篇文章到看着它印在理想的期刊上需要三年的时间，而发表在一个高等级的期刊则需要更长的时间）。如果你经常转移领域，那么你就不会花大量时间来写作和发表文章。对这种一般性的一个明显例外就是如果你游学在两个你都具有坚实基础的学科之间，立足于一个专业并应用另一个专业的概念，那就可能非常有成效。
 
 按照地理游学的方式是和你工作领域中最聪明的头脑共同工作的最好的方式，而且可以看遍这个世界。然而，如果你有让这条道路变得艰难的困难，或者你不喜欢旅行，你或许会考虑一个非游学的生涯，就像以下描述的隐士学者的方式。
 
@@ -76,7 +76,7 @@
 
 有人认为，如果你是一位女士，穿着方面最简单的方式就是尽量地暴露，露出尽可能多的大腿和乳沟。大部分面试官们可能会对此有些反感。抛开这个问题不谈，你要穿什么呢？
 
-用学术语言来说，你需要进行功能性思考。什么是面试时衣服的功能呢？事实上，有几种功能，个功能是简单地表示出你有理性的社会技能，在需要的时候，能够用来同外部世界取得联系。有时候，在描述外表时也说诸如要“他们穿着得体”，这意味着他们在正规的情境中是完全职业化的、体面的。
+用学术语言来说，你需要进行功能性思考。什么是面试时衣服的功能呢？事实上，有几种功能，一个功能是简单地表示出你有理性的社会技能，在需要的时候，能够用来同外部世界取得联系。有时候，在描述外表时也说诸如要“他们穿着得体”，这意味着他们在正规的情境中是完全职业化的、体面的。
 
 同工作日的外部世界比较，学术服装的惯例通常是宽松的，但是面试则不同。全体面试成员都会认为，你的面试穿着就是在你的想法中你在正式场合的穿着。出席你自己系的招聘会是一个好主意，你可以看看应聘者是怎么着装的。
 
@@ -103,11 +103,11 @@
 
 你能喝到咖啡（有时候是茶）。通常情况下没有人告诉你卫生间在什么地方。如果有人问你咖啡味道如何，别说任何给你带来麻烦的话。如果你只喜欢喝茶的话，你或许要学会不要面带苦相地喝咖啡。
 
-如果他们还没告诉你洗手间在什么地方，那么就自己去找，用你的直觉，或者是用一种礼貌但不带哀求的声调去问。然后你就能做一些重要的事情，诸如检查你的衣服上是不是有油点，后面的头发是不是巳经打绺等事情。你没必要慌慌张张地冲出去四处寻找洗手间要小心水龙头，它们会突然喷出水来，让你的裤子上湿漉漉的尴尬出丑。
+如果他们还没告诉你洗手间在什么地方，那么就自己去找，用你的直觉，或者是用一种礼貌但不带哀求的声调去问。然后你就能做一些重要的事情，诸如检查你的衣服上是不是有油点，后面的头发是不是已经打绺等事情。你没必要慌慌张张地冲出去四处寻找洗手间要小心水龙头，它们会突然喷出水来，让你的裤子上湿漉漉的尴尬出丑。
 
 ### 你的陈述
 
-通常你会被要求用（10-20）分钟时间概括你的学术成就并描述过去、现在和未来的研究。你或许还会被要求做一个陈述。利用这种办法发现好的候选人的价值是有争议的，但是令人吃惊的是这种办法在发现一些你的系里花多么少的钱也不想要的傻瓜上是十分有用的。
+通常你会被要求用10-20分钟时间概括你的学术成就并描述过去、现在和未来的研究。你或许还会被要求做一个陈述。利用这种办法发现好的候选人的价值是有争议的，但是令人吃惊的是这种办法在发现一些你的系里花多么少的钱也不想要的傻瓜上是十分有用的。
 
 记住以下事情：
 
@@ -115,7 +115,9 @@
 
 你正在按工作对个人技能的要求说明所有关键的、优异的大多数技能吗？
 
-如果你是面试小组成员，候选人有什么特点可以赢得你的好感？备用设备——如果使用PPT或者类似的东西，那么就要有OHP幻灯机作为备用，如果这些都失效了的话，准备好使用白板。
+如果你是面试小组成员，候选人有什么特点可以赢得你的好感？
+
+备用设备——如果使用PPT或者类似的东西，那么就要有OHP幻灯机作为备用，如果这些都失效了的话，准备好使用白板。
 
 在面试的前几天，尽可能多地做准备，让演讲的长度恰到好处。如果你有条件的话，在一间空屋子里先做一遍演讲。
 
@@ -133,7 +135,7 @@
 * 一两个高层人员——比如院长——想看着正在发生的事情，确信选人的计划适合院系；
 * 一些可信、健康的人，穿戴整齐，代替上面高层中的其中一人站一会儿，用来凑足人数。
 
-面试小组成员通常会轮流工作，经常会问你他们巳经问了其他候选人的同样的问题。如果其他候选人之一有一些奇异的特点，那么出于比较的兴趣你就会被问与其他人相同的问题。如果你遭遇到了麻烦的问题，你可以请求面试小组解释一下，因为还不十分清楚他们试图从什么的角度来问。
+面试小组成员通常会轮流工作，经常会问你他们已经问了其他候选人的同样的问题。如果其他候选人之一有一些奇异的特点，那么出于比较的兴趣你就会被问与其他人相同的问题。如果你遭遇到了麻烦的问题，你可以请求面试小组解释一下，因为还不十分清楚他们试图从什么的角度来问。
 
 面试小组成员（理论上）会预先对他们提问的顺序和所问的问题达成一致。他们也会（理论上）在他们的面前放上要“关键与优异特点”的清单，并且用记号逐一勾画出你显示出来的特点。一些面试成员会简单数画勾的个数，并把它作为选择的基础，这能导致一些骇人的决定。如果面试小组要选出了一个比落选的候选人更差的人，可以有各种各样合法的理由，这就是为什么有一些看起来奇怪的决定的原因。
 
@@ -143,7 +145,7 @@
 
 系里的成员们：
 
-* 找到一些能帮助教在S0D2001课程的人，在系里现在的团队中还没有人能教这门课程；
+* 找到一些能帮助教在SOD2001课程的人，在系里现在的团队中还没有人能教这门课程；
 * 找到一些能在第一年就教课教得非常好的人；
 * 找到一些人给毕业班和科学硕士学生教授复杂内容；
 * 找到一个安全的好搭档，能够帮助系里解决问题；
@@ -210,7 +212,7 @@
 * 我还没考虑过这个问题。
 * 一些和人文学科相关的课程。
 * 人-机相互作用或定量方法。
-* 我已经讲授过从HND到科学硕士（MSc）的所有层次的系统分析和设计课程，因此我能够教你的SOD1001、S0D2001、S0D3001和S0D4001课程，我也能……
+* 我已经讲授过从HND到科学硕士（MSc）的所有层次的系统分析和设计课程，因此我能够教你的SOD1001、SOD2001、SOD3001和SOD4001课程，我也能……
 
 ### 你能问的问题
 
@@ -222,7 +224,7 @@
 
 多做些准备工作是没有坏处的。你可以去了解一下招聘院系的人员，通过到该院系一个研讨会或者是在学术会议上和那些人员建立朋友关系。
 
-如果你申请一个博士后研究职位，那么你要找出你的潜力老板喜欢的工作方式。他们会把你像狗一样地使用，在出版物上不写你的名字，一旦基金用尽就把你抛弃吗？他们是能照顾你并让人高兴的人吗？会给你一两篇论文的第一作者署名权吗？－且基金用尽他们也会尽可能地照顾你吗——例如，找到更多的钱接着做项目？
+如果你申请一个博士后研究职位，那么你要找出你的潜力老板喜欢的工作方式。他们会把你像狗一样地使用，在出版物上不写你的名字，一旦基金用尽就把你抛弃吗？他们是能照顾你并让人高兴的人吗？会给你一两篇论文的第一作者署名权吗？一旦基金用尽他们也会尽可能地照顾你吗——例如，找到更多的钱接着做项目？
 
 你也需要了解其他内容，如：招聘院系开设什么课程，有多少教员，多少学生（你能计算师生比例并算出工作量），他们已经发表了多少研究成果等等。
 
@@ -230,7 +232,7 @@
 
 ## 人生计划
 
-你开始思索应该如何规划你的一生，但你却不知从何处开始入手。你怎样计划自己未来的十年或者未来的十个月？你怎样知道从现在开始的未来十年你会想要什么？为什么你周围的人那些光耀夺目而你却事事不顺？为什么你所有的袜子看起来都很遽遇？这些问题和许多其他问题的答案都可以在以下的部分找到。
+你开始思索应该如何规划你的一生，但你却不知从何处开始入手。你怎样计划自己未来的十年或者未来的十个月？你怎样知道从现在开始的未来十年你会想要什么？为什么你周围的人那些光耀夺目而你却事事不顺？为什么你所有的袜子看起来都很邋遢？这些问题和许多其他问题的答案都可以在以下的部分找到。
 
 ### 时间和理性计划
 
