--- a/06.qmd
+++ b/06.qmd
@@ -34,7 +34,7 @@
 
 学术文章或论文一般都是以文献综述开始的口有很多原因可以解释这种安排。
 
-一个显而易见的原因是为论文将要涉及的研究工作进行铺垫（比如告诉读者前人已经做了哪些工作）。引用前人的研究要采用标准的引用格式，以方便感兴趣的和持怀疑意见的读者查找原文出处，与文献综述的内容作对照。第二个原因也同样重要，那就是通过文献综述证明你巳经系统地做了相关研究，让读者相信读你的论文不会是浪费时间。
+一个显而易见的原因是为论文将要涉及的研究工作进行铺垫（比如告诉读者前人已经做了哪些工作）。引用前人的研究要采用标准的引用格式，以方便感兴趣的和持怀疑意见的读者查找原文出处，与文献综述的内容作对照。第二个原因也同样重要，那就是通过文献综述证明你已经系统地做了相关研究，让读者相信读你的论文不会是浪费时间。
 
 文献综述应该有一个清晰的结构以方便读者阅读，因为即使是再好的学术性文章也会比较艰深难懂。清晰的结构也可以显示出你了解自己在做什么，以及为什么要这么做。让读者读懂你的文章是你的责任，而不是读者的责任。如果你从网上找来一些参考资料不加区分地堆在一起，那么读者没有责任帮你从一篇混乱的文章中理出思路。
 
@@ -306,7 +306,7 @@
 
 结论通常还包括关于不“将来研究”的部分。结论应该对引言中提出的问题给出一系列清楚明确的回答。这些回答应该由结果部分（如果是实验科学学科的论文）的数据以及讨论部分（每一类论文都必须有）的内容作为依据。
 
-学者们常常利用将来研究的部分为自己在未来的研究领域抢得一块地盘。有经验的研究人员往往会在这个部分简要描述自己未来的研究计划和课题，有经验的读者能清楚认识到，到论文发表时，它的作者可能巳经花了一年的时间在新课题的研究上了，所以自己也就没有必要草率地往那个研究方向上努力了。
+学者们常常利用将来研究的部分为自己在未来的研究领域抢得一块地盘。有经验的研究人员往往会在这个部分简要描述自己未来的研究计划和课题，有经验的读者能清楚认识到，到论文发表时，它的作者可能已经花了一年的时间在新课题的研究上了，所以自己也就没有必要草率地往那个研究方向上努力了。
 
 ### 批判性反思部分
 
