--- a/15.qmd
+++ b/15.qmd
@@ -1,6 +1,6 @@
 # 学术会议
 
-研究者们主要通过三种方式来获取他们研究领域内的最新进展。口头传递是一种迅速且有效的方式——如果史密斯和琼斯巳经解决了他们领域中最重要的问题，他们领域内的主要研究者们会在消息公布于众前的儿小时通过电话交谈和电子邮件传递这件事情。如果你是这个传递网络主要的参与者，这是非常好的事情，但是如果你只是一个正在努力奋斗的博士生，那么这种方式就不是那么好了。
+研究者们主要通过三种方式来获取他们研究领域内的最新进展。口头传递是一种迅速且有效的方式——如果史密斯和琼斯已经解决了他们领域中最重要的问题，他们领域内的主要研究者们会在消息公布于众前的儿小时通过电话交谈和电子邮件传递这件事情。如果你是这个传递网络主要的参与者，这是非常好的事情，但是如果你只是一个正在努力奋斗的博士生，那么这种方式就不是那么好了。
 
 对于大多数博士生而言，跟上潮流的一个更为可行的方式就是阅读期刊。不幸的是，期刊文章要在研究结束后两年左右才能刊出，因此，你的图书馆里新上架的期刊的文章大概都是三年前完成的研究内容。在学术会议上获得最新的研究进展则相对容易得多。每年，大多数研究领域都会开一些年会，来自世界各地的研究者们会聚在一起，展示他们的工作并且聆听别人阐述工作。更重要的，他们也开展社交并建立他们的社交网络，通常的方式包括去酒吧喝酒。因此，学术会议给你一个机会发现不超过一年甚至更近一段时间的研究，并且也给你机会结识世界各地的同领域研究者。
 
@@ -10,7 +10,7 @@
 
 你能够参加的学术会议有两种内容。一种是介绍自己的工作，而另一种是不介绍自己的工作。我们接下来讨论的情况是你介绍自己的工作，当然这已经包括作为一名听众你需要做什么。
 
-在一个学术会议上展示自己的研究进展有儿个主要途径。其中之一是你想公开发表一些东西，但概念没有完全成形，学术会议就是一个好地方。另一种情况：一开始就是为了免费游览会议所在地点而去的，这需要你把研究精力集中在你所向往的会议地点举办的会议的会议主题上。第三种情况：期待让一篇论文被一个特殊的会议选中，因为这是这个领域内的主要会议。巧合的是，会议通常在夏威夷之类的地方召开，并且他们对可以接纳的论文的标准又相对较低。
+在一个学术会议上展示自己的研究进展有几个主要途径。其中之一是你想公开发表一些东西，但概念没有完全成形，学术会议就是一个好地方。另一种情况：一开始就是为了免费游览会议所在地点而去的，这需要你把研究精力集中在你所向往的会议地点举办的会议的会议主题上。第三种情况：期待让一篇论文被一个特殊的会议选中，因为这是这个领域内的主要会议。巧合的是，会议通常在夏威夷之类的地方召开，并且他们对可以接纳的论文的标准又相对较低。
 
 不管过程怎样，最后都需要适合那个会议的论文。征文通知将说明哪种类型的论文会被接受，会给每一种论文的类型提供指导原则，也会告知截止日期。征文主要类型通常包括一些或者以下的全部。
 
