--- a/09.qmd
+++ b/09.qmd
@@ -40,7 +40,7 @@
 
 一些经典错误，以及如何避免它们
 :   * 不要拖到最后一刻。事先制订计划，留出充裕的时间对付意外情况，包括装订文稿的时间都应该事先安排好。
-    * 不要含糊其锌。
+    * 不要含糊其辞。
     * 不要用模棱两可的语句来逃避问题——评审人能一眼就看出你是在逃避问题，并会在答辩时无情地质问你。
     * 不要将问题简单化。你的读者也是专业的研究人员，把问题简单化会让他们认为你没有领会你研究领域的复杂性。
     * 不要使用连你自己都不确定是什么意思的大词（big words）。错误使用大词会让你看起来像个白痴。评审人知道的大词、生僻词一定比你多，他们不会对你炫耀词汇量的行为产生什么好感。
