Correct one character
See https://hyp.is/Q0GlsO4LEe2KpOeUiCI9ZQ/psychelzh.github.io/phdrule/01.html

--- a/01.qmd
+++ b/01.qmd
@@ -2,7 +2,7 @@
 
 攻读博士学位的人大致可以分为两种。其一是知道自己正在做什么，然后顺着规划好的道路前行的人，他们偶尔陷人沮丧和绝望，但往往最后都会顺利地拿到博士学位（除非在这期间做出一些相当愚蠢的事情或半途而废）。然后，他们顺理成章地进入人生的下一阶段。第二种人则是多数博士生的缩影。他们跌跌撞撞地闯进来，在数年里漫无目标地徘徊和循环往复，时常陷入沮丧和绝望的境地。最后可能拿到，也可能拿不到博士学位。在这之后，他们仍然继续徘徊，不知道在人生的下一个阶段中该做些什么。本书正是为这些觉得自己正在第二条路上徘徊前行的人写的。
 
-针对那些想要攻读博士学位的人写的好书有很多。如果你正在考虑攻读博士学位，那么你至少应该找一本这样的书来看看口这些书在你需要做什么这方面提供了很多不错的建议。我们花了不少时间来帮助那些读过这类书的学生们。他们需要帮助的原因并不是因为这些书的内容本身有什么错，面问题恰恰在于这些书没有涉及的内容上。第一方面的问题在于这些书中通常缺少一个关于攻读博士学位的“完整的流程”，另外一方面的问题是这些书中普遍缺少一些介绍基本技能、技巧的内容。出现这些问题的原因，大概是因为这些书的作者都认为，这些基本技能目前大部分的博士生在导师那里或者在培训班里都已经学过了。本书旨在填补上述空缺。
+针对那些想要攻读博士学位的人写的好书有很多。如果你正在考虑攻读博士学位，那么你至少应该找一本这样的书来看看。这些书在你需要做什么这方面提供了很多不错的建议。我们花了不少时间来帮助那些读过这类书的学生们。他们需要帮助的原因并不是因为这些书的内容本身有什么错，面问题恰恰在于这些书没有涉及的内容上。第一方面的问题在于这些书中通常缺少一个关于攻读博士学位的“完整的流程”，另外一方面的问题是这些书中普遍缺少一些介绍基本技能、技巧的内容。出现这些问题的原因，大概是因为这些书的作者都认为，这些基本技能目前大部分的博士生在导师那里或者在培训班里都已经学过了。本书旨在填补上述空缺。
 
 无论如何都要记住，在攻读博士学位的时候，还是要考虑你的兴趣所在。你会有若干关于为什么、怎么做、是什么的问题。大多数这样的问题可以在一些关于攻读博士学位的书籍，或者在你打算去的学院的程序性文件中找到答案。不过，这些答案对于处在目前这个阶段的你来说或许没有太大的意义。
 
